LDEV-3337: Update Quartz 1.5.2 -> 2.2.1