@@ -1,6 +1,6 @@
 
 /* 
- * Copyright 2004-2005 OpenSymphony 
+ * Copyright 2001-2009 Terracotta, Inc. 
  * 
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not 
  * use this file except in compliance with the License. You may obtain a copy 
@@ -16,26 +16,20 @@
  * 
  */
 
-/*
- * Previously Copyright (c) 2001-2004 James House
- */
 package org.quartz;
 
 import java.io.Serializable;
-import java.util.Iterator;
 import java.util.Map;
 
-import org.quartz.utils.DirtyFlagMap;
+import org.quartz.utils.StringKeyDirtyFlagMap;
 
 /**
- * <p>
  * Holds state information for <code>Job</code> instances.
- * </p>
  * 
  * <p>
  * <code>JobDataMap</code> instances are stored once when the <code>Job</code>
  * is added to a scheduler. They are also re-persisted after every execution of
- * <code>StatefulJob</code> instances.
+ * jobs annotated with <code>@PersistJobDataAfterExecution</code>.
  * </p>
  * 
  * <p>
@@ -54,13 +48,13 @@ import org.quartz.utils.DirtyFlagMap;
  * </p>
  * 
  * @see Job
- * @see StatefulJob
+ * @see PersistJobDataAfterExecution
  * @see Trigger
  * @see JobExecutionContext
  * 
  * @author James House
  */
-public class JobDataMap extends DirtyFlagMap implements Serializable {
+public class JobDataMap extends StringKeyDirtyFlagMap implements Serializable {
 
     private static final long serialVersionUID = -6939901990106713909L;
     
@@ -68,16 +62,6 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      * 
      * Data members.
-     * 
-     * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-     */
-
-    private boolean allowsTransientData = false;
-
-    /*
-     * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-     * 
-     * Constructors.
      * 
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      */
@@ -96,10 +80,11 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
      * Create a <code>JobDataMap</code> with the given data.
      * </p>
      */
-    public JobDataMap(Map map) {
+    public JobDataMap(Map<?, ?> map) {
         this();
-
-        putAll(map);
+        @SuppressWarnings("unchecked") // casting to keep API compatible and avoid compiler errors/warnings.
+        Map<String, Object> mapTyped = (Map<String, Object>)map;
+        putAll(mapTyped);
     }
 
     /*
@@ -112,163 +97,12 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
 
     /**
      * <p>
-     * Tell the <code>JobDataMap</code> that it should allow non- <code>Serializable</code>
-     * data.
-     * </p>
-     * 
-     * <p>
-     * If the <code>JobDataMap</code> does contain non- <code>Serializable</code>
-     * objects, and it belongs to a non-volatile <code>Job</code> that is
-     * stored in a <code>JobStore</code> that supports persistence, then
-     * those elements will be nulled-out during persistence.
-     * </p>
-     */
-    public void setAllowsTransientData(boolean allowsTransientData) {
-
-        if (containsTransientData() && !allowsTransientData)
-                throw new IllegalStateException(
-                        "Cannot set property 'allowsTransientData' to 'false' "
-                                + "when data map contains non-serializable objects.");
-
-        this.allowsTransientData = allowsTransientData;
-    }
-
-    public boolean getAllowsTransientData() {
-        return allowsTransientData;
-    }
-
-    public boolean containsTransientData() {
-
-        if (!getAllowsTransientData()) // short circuit...
-                return false;
-
-        String[] keys = getKeys();
-
-        for (int i = 0; i < keys.length; i++) {
-            Object o = super.get(keys[i]);
-            if (!(o instanceof Serializable)) return true;
-        }
-
-        return false;
-    }
-
-    /**
-     * <p>
-     * Nulls-out any data values that are non-Serializable.
-     * </p>
-     */
-    public void removeTransientData() {
-
-        if (!getAllowsTransientData()) // short circuit...
-                return;
-
-        String[] keys = getKeys();
-
-        for (int i = 0; i < keys.length; i++) {
-            Object o = super.get(keys[i]);
-            if (!(o instanceof Serializable)) remove(keys[i]);
-        }
-
-    }
-
-    /**
-     * <p>
-     * Adds the name-value pairs in the given <code>Map</code> to the <code>JobDataMap</code>.
-     * </p>
-     * 
-     * <p>
-     * All keys must be <code>String</code>s, and all values must be <code>Serializable</code>.
-     * </p>
-     */
-    public void putAll(Map map) {
-        Iterator itr = map.keySet().iterator();
-        while (itr.hasNext()) {
-            Object key = itr.next();
-            Object val = map.get(key);
-
-            put(key, val);
-            // will throw IllegalArgumentException if value not serilizable
-        }
-    }
-
-    /**
-     * <p>
-     * Adds the given <code>int</code> value to the <code>Job</code>'s
-     * data map.
-     * </p>
-     */
-    public void put(String key, int value) {
-        super.put(key, new Integer(value));
-    }
-
-    /**
-     * <p>
-     * Adds the given <code>long</code> value to the <code>Job</code>'s
-     * data map.
-     * </p>
-     */
-    public void put(String key, long value) {
-        super.put(key, new Long(value));
-    }
-
-    /**
-     * <p>
-     * Adds the given <code>float</code> value to the <code>Job</code>'s
-     * data map.
-     * </p>
-     */
-    public void put(String key, float value) {
-        super.put(key, new Float(value));
-    }
-
-    /**
-     * <p>
-     * Adds the given <code>double</code> value to the <code>Job</code>'s
-     * data map.
-     * </p>
-     */
-    public void put(String key, double value) {
-        super.put(key, new Double(value));
-    }
-
-    /**
-     * <p>
-     * Adds the given <code>boolean</code> value to the <code>Job</code>'s
-     * data map.
-     * </p>
-     */
-    public void put(String key, boolean value) {
-        super.put(key, new Boolean(value));
-    }
-
-    /**
-     * <p>
-     * Adds the given <code>char</code> value to the <code>Job</code>'s
-     * data map.
-     * </p>
-     */
-    public void put(String key, char value) {
-        super.put(key, new Character(value));
-    }
-
-    /**
-     * <p>
-     * Adds the given <code>String</code> value to the <code>Job</code>'s
-     * data map.
-     * </p>
-     */
-    public void put(String key, String value) {
-        super.put(key, value);
-    }
-
-    /**
-     * <p>
      * Adds the given <code>boolean</code> value as a string version to the
      * <code>Job</code>'s data map.
      * </p>
      */
     public void putAsString(String key, boolean value) {
-        String strValue = new Boolean(value).toString();
+        String strValue = Boolean.valueOf(value).toString();
 
         super.put(key, strValue);
     }
@@ -292,7 +126,7 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
      * </p>
      */
     public void putAsString(String key, char value) {
-        String strValue = new Character(value).toString();
+        String strValue = Character.valueOf(value).toString();
 
         super.put(key, strValue);
     }
@@ -316,7 +150,7 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
      * </p>
      */
     public void putAsString(String key, double value) {
-        String strValue = new Double(value).toString();
+        String strValue = Double.toString(value);
 
         super.put(key, strValue);
     }
@@ -340,7 +174,7 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
      * </p>
      */
     public void putAsString(String key, float value) {
-        String strValue = new Float(value).toString();
+        String strValue = Float.toString(value);
 
         super.put(key, strValue);
     }
@@ -364,7 +198,7 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
      * </p>
      */
     public void putAsString(String key, int value) {
-        String strValue = new Integer(value).toString();
+        String strValue = Integer.valueOf(value).toString();
 
         super.put(key, strValue);
     }
@@ -388,7 +222,7 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
      * </p>
      */
     public void putAsString(String key, long value) {
-        String strValue = new Long(value).toString();
+        String strValue = Long.valueOf(value).toString();
 
         super.put(key, strValue);
     }
@@ -407,146 +241,6 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
 
     /**
      * <p>
-     * Adds the given <code>Serializable</code> object value to the <code>JobDataMap</code>.
-     * </p>
-     */
-    public Object put(Object key, Object value) {
-        if (!(key instanceof String))
-                throw new IllegalArgumentException(
-                        "Keys in map must be Strings.");
-
-        return super.put(key, value);
-    }
-
-    /**
-     * <p>
-     * Retrieve the identified <code>int</code> value from the <code>JobDataMap</code>.
-     * </p>
-     * 
-     * @throws ClassCastException
-     *           if the identified object is not an Integer.
-     */
-    public int getInt(String key) {
-        Object obj = get(key);
-
-        try {
-            return ((Integer) obj).intValue();
-        } catch (Exception e) {
-            throw new ClassCastException("Identified object is not an Integer.");
-        }
-    }
-
-    /**
-     * <p>
-     * Retrieve the identified <code>long</code> value from the <code>JobDataMap</code>.
-     * </p>
-     * 
-     * @throws ClassCastException
-     *           if the identified object is not a Long.
-     */
-    public long getLong(String key) {
-        Object obj = get(key);
-
-        try {
-            return ((Long) obj).longValue();
-        } catch (Exception e) {
-            throw new ClassCastException("Identified object is not a Long.");
-        }
-    }
-
-    /**
-     * <p>
-     * Retrieve the identified <code>float</code> value from the <code>JobDataMap</code>.
-     * </p>
-     * 
-     * @throws ClassCastException
-     *           if the identified object is not a Float.
-     */
-    public float getFloat(String key) {
-        Object obj = get(key);
-
-        try {
-            return ((Float) obj).floatValue();
-        } catch (Exception e) {
-            throw new ClassCastException("Identified object is not a Float.");
-        }
-    }
-
-    /**
-     * <p>
-     * Retrieve the identified <code>double</code> value from the <code>JobDataMap</code>.
-     * </p>
-     * 
-     * @throws ClassCastException
-     *           if the identified object is not a Double.
-     */
-    public double getDouble(String key) {
-        Object obj = get(key);
-
-        try {
-            return ((Double) obj).doubleValue();
-        } catch (Exception e) {
-            throw new ClassCastException("Identified object is not a Double.");
-        }
-    }
-
-    /**
-     * <p>
-     * Retrieve the identified <code>boolean</code> value from the <code>JobDataMap</code>.
-     * </p>
-     * 
-     * @throws ClassCastException
-     *           if the identified object is not a Boolean.
-     */
-    public boolean getBoolean(String key) {
-        Object obj = get(key);
-
-        try {
-            return ((Boolean) obj).booleanValue();
-        } catch (Exception e) {
-            throw new ClassCastException("Identified object is not a Boolean.");
-        }
-    }
-
-    /**
-     * <p>
-     * Retrieve the identified <code>char</code> value from the <code>JobDataMap</code>.
-     * </p>
-     * 
-     * @throws ClassCastException
-     *           if the identified object is not a Character.
-     */
-    public char getChar(String key) {
-        Object obj = get(key);
-
-        try {
-            return ((Character) obj).charValue();
-        } catch (Exception e) {
-            throw new ClassCastException(
-                    "Identified object is not a Character.");
-        }
-    }
-
-    /**
-     * <p>
-     * Retrieve the identified <code>String</code> value from the <code>JobDataMap</code>.
-     * </p>
-     * 
-     * @throws ClassCastException
-     *           if the identified object is not a String.
-     */
-    public String getString(String key) {
-        Object obj = get(key);
-
-        try {
-            return (String) obj;
-        } catch (Exception e) {
-            throw new ClassCastException("Identified object is not a String.");
-        }
-    }
-
-    /**
-     * <p>
      * Retrieve the identified <code>int</code> value from the <code>JobDataMap</code>.
      * </p>
      * 
@@ -556,7 +250,7 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
     public int getIntFromString(String key) {
         Object obj = get(key);
 
-        return new Integer((String) obj).intValue();
+        return new Integer((String) obj);
     }
 
     /**
@@ -565,15 +259,16 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
      * </p>
      * 
      * @throws ClassCastException
-     *           if the identified object is not a String or Integeger.
+     *           if the identified object is not a String or Integer.
      */
-    public long getIntValue(String key) {
+    public int getIntValue(String key) {
         Object obj = get(key);
 
-        if(obj instanceof String)
+        if(obj instanceof String) {
             return getIntFromString(key);
-        else
+        } else {
             return getInt(key);
+        }
     }
     
     /**
@@ -601,7 +296,7 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
     public boolean getBooleanValueFromString(String key) {
         Object obj = get(key);
 
-        return new Boolean((String) obj).booleanValue();
+        return Boolean.valueOf((String) obj);
     }
 
     /**
@@ -616,10 +311,11 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
     public boolean getBooleanValue(String key) {
         Object obj = get(key);
 
-        if(obj instanceof String)
+        if(obj instanceof String) {
             return getBooleanValueFromString(key);
-        else
+        } else {
             return getBoolean(key);
+        }
     }
 
     /**
@@ -633,7 +329,7 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
     public Boolean getBooleanFromString(String key) {
         Object obj = get(key);
 
-        return new Boolean((String) obj);
+        return Boolean.valueOf((String) obj);
     }
 
     /**
@@ -661,7 +357,7 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
     public Character getCharacterFromString(String key) {
         Object obj = get(key);
 
-        return new Character(((String) obj).charAt(0));
+        return ((String) obj).charAt(0);
     }
 
     /**
@@ -675,7 +371,7 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
     public double getDoubleValueFromString(String key) {
         Object obj = get(key);
 
-        return new Double((String) obj).doubleValue();
+        return Double.valueOf((String) obj);
     }
 
     /**
@@ -689,10 +385,11 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
     public double getDoubleValue(String key) {
         Object obj = get(key);
 
-        if(obj instanceof String)
+        if(obj instanceof String) {
             return getDoubleValueFromString(key);
-        else
+        } else {
             return getDouble(key);
+        }
     }
 
     /**
@@ -720,7 +417,7 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
     public float getFloatValueFromString(String key) {
         Object obj = get(key);
 
-        return new Float((String) obj).floatValue();
+        return new Float((String) obj);
     }
 
     /**
@@ -734,10 +431,11 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
     public float getFloatValue(String key) {
         Object obj = get(key);
 
-        if(obj instanceof String)
+        if(obj instanceof String) {
             return getFloatValueFromString(key);
-        else
+        } else {
             return getFloat(key);
+        }
     }
     
     /**
@@ -765,7 +463,7 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
     public long getLongValueFromString(String key) {
         Object obj = get(key);
 
-        return new Long((String) obj).longValue();
+        return new Long((String) obj);
     }
 
     /**
@@ -779,10 +477,11 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
     public long getLongValue(String key) {
         Object obj = get(key);
 
-        if(obj instanceof String)
+        if(obj instanceof String) {
             return getLongValueFromString(key);
-        else
+        } else {
             return getLong(key);
+        }
     }
     
     /**
@@ -798,9 +497,4 @@ public class JobDataMap extends DirtyFlagMap implements Serializable {
 
         return new Long((String) obj);
     }
-
-    public String[] getKeys() {
-        return (String[]) keySet().toArray(new String[size()]);
-    }
-
 }
