@@ -1,23 +1,20 @@
-/* 
- * Copyright 2004-2005 OpenSymphony 
- * 
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not 
- * use this file except in compliance with the License. You may obtain a copy 
- * of the License at 
- * 
- *   http://www.apache.org/licenses/LICENSE-2.0 
- *   
- * Unless required by applicable law or agreed to in writing, software 
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the 
- * License for the specific language governing permissions and limitations 
+/*
+ * Copyright 2001-2009 Terracotta, Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not
+ * use this file except in compliance with the License. You may obtain a copy
+ * of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ * License for the specific language governing permissions and limitations
  * under the License.
- * 
+ *
  */
 
-/*
- * Previously Copyright (c) 2001-2004 James House
- */
 package org.quartz.impl;
 
 import java.beans.BeanInfo;
@@ -30,14 +27,12 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.Method;
+import java.security.AccessControlException;
 import java.sql.SQLException;
 import java.util.Collection;
-import java.util.Iterator;
 import java.util.Locale;
 import java.util.Properties;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.quartz.JobListener;
 import org.quartz.Scheduler;
 import org.quartz.SchedulerConfigException;
@@ -47,10 +42,14 @@ import org.quartz.TriggerListener;
 import org.quartz.core.JobRunShellFactory;
 import org.quartz.core.QuartzScheduler;
 import org.quartz.core.QuartzSchedulerResources;
-import org.quartz.core.SchedulingContext;
+import org.quartz.ee.jta.JTAAnnotationAwareJobRunShellFactory;
 import org.quartz.ee.jta.JTAJobRunShellFactory;
 import org.quartz.ee.jta.UserTransactionHelper;
 import org.quartz.impl.jdbcjobstore.JobStoreSupport;
+import org.quartz.impl.jdbcjobstore.Semaphore;
+import org.quartz.impl.jdbcjobstore.TablePrefixAware;
+import org.quartz.impl.matchers.EverythingMatcher;
+import org.quartz.management.ManagementRESTServiceConfiguration;
 import org.quartz.simpl.RAMJobStore;
 import org.quartz.simpl.SimpleThreadPool;
 import org.quartz.spi.ClassLoadHelper;
@@ -58,50 +57,62 @@ import org.quartz.spi.InstanceIdGenerator;
 import org.quartz.spi.JobFactory;
 import org.quartz.spi.JobStore;
 import org.quartz.spi.SchedulerPlugin;
+import org.quartz.spi.ThreadExecutor;
 import org.quartz.spi.ThreadPool;
 import org.quartz.utils.ConnectionProvider;
 import org.quartz.utils.DBConnectionManager;
 import org.quartz.utils.JNDIConnectionProvider;
 import org.quartz.utils.PoolingConnectionProvider;
 import org.quartz.utils.PropertiesParser;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * <p>
  * An implementation of <code>{@link org.quartz.SchedulerFactory}</code> that
- * does all of it's work of creating a <code>QuartzScheduler</code> instance
- * based on the contenents of a <code>Properties</code> file.
+ * does all of its work of creating a <code>QuartzScheduler</code> instance
+ * based on the contents of a <code>Properties</code> file.
  * </p>
- * 
+ *
  * <p>
  * By default a properties file named "quartz.properties" is loaded from the
  * 'current working directory'. If that fails, then the "quartz.properties"
  * file located (as a resource) in the org/quartz package is loaded. If you
  * wish to use a file other than these defaults, you must define the system
- * property 'org.quartz.properties' to* point to the file you want.
+ * property 'org.quartz.properties' to point to the file you want.
  * </p>
- * 
+ *
+ * <p>
+ * Alternatively, you can explicitly initialize the factory by calling one of
+ * the <code>initialize(xx)</code> methods before calling <code>getScheduler()</code>.
+ * </p>
+ *
  * <p>
  * See the sample properties files that are distributed with Quartz for
  * information about the various settings available within the file.
+ * Full configuration documentation can be found at
+ * http://www.quartz-scheduler.org/docs/index.html
  * </p>
- * 
- * <p>
- * Alternativly, you can explicitly initialize the factory by calling one of
- * the <code>initialize(xx)</code> methods before calling <code>getScheduler()</code>.
- * </p>
- * 
+ *
  * <p>
  * Instances of the specified <code>{@link org.quartz.spi.JobStore}</code>,
- * <code>{@link org.quartz.spi.ThreadPool}</code>, classes will be created
+ * <code>{@link org.quartz.spi.ThreadPool}</code>, and other SPI classes will be created
  * by name, and then any additional properties specified for them in the config
  * file will be set on the instance by calling an equivalent 'set' method. For
- * example if the properties file contains the property 'org.quartz.jobStore.
- * myProp = 10' then after the JobStore class has been instantiated, the method
- * 'setMyProp()' will be called on it. Type conversion to primitive Java types
- * (int, long, float, double, boolean, and String) are performed before calling
- * the propertie's setter method.
+ * example if the properties file contains the property
+ * 'org.quartz.jobStore.myProp = 10' then after the JobStore class has been
+ * instantiated, the method 'setMyProp()' will be called on it. Type conversion
+ * to primitive Java types (int, long, float, double, boolean, and String) are
+ * performed before calling the property's setter method.
  * </p>
  * 
+ * <p>
+ * One property can reference another property's value by specifying a value
+ * following the convention of "$@other.property.name", for example, to reference
+ * the scheduler's instance name as the value for some other property, you
+ * would use "$@org.quartz.scheduler.instanceName".
+ * </p> 
+ *
  * @author James House
  * @author Anthony Eden
  * @author Mohammad Rezaei
@@ -110,9 +121,9 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
     /*
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-     * 
+     *
      * Constants.
-     * 
+     *
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      */
 
@@ -122,9 +133,26 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
     public static final String PROP_SCHED_INSTANCE_ID = "org.quartz.scheduler.instanceId";
 
-    public static final String PROP_SCHED_INSTANCE_ID_GENERATOR_CLASS = "org.quartz.scheduler.instanceIdGenerator.class";
-    
+    public static final String PROP_SCHED_INSTANCE_ID_GENERATOR_PREFIX = "org.quartz.scheduler.instanceIdGenerator";
+
+    public static final String PROP_SCHED_INSTANCE_ID_GENERATOR_CLASS =
+        PROP_SCHED_INSTANCE_ID_GENERATOR_PREFIX + ".class";
+
     public static final String PROP_SCHED_THREAD_NAME = "org.quartz.scheduler.threadName";
+
+    public static final String PROP_SCHED_SKIP_UPDATE_CHECK = "org.quartz.scheduler.skipUpdateCheck";
+
+    public static final String PROP_SCHED_BATCH_TIME_WINDOW = "org.quartz.scheduler.batchTriggerAcquisitionFireAheadTimeWindow";
+
+    public static final String PROP_SCHED_MAX_BATCH_SIZE = "org.quartz.scheduler.batchTriggerAcquisitionMaxCount";
+
+    public static final String PROP_SCHED_JMX_EXPORT = "org.quartz.scheduler.jmx.export";
+
+    public static final String PROP_SCHED_JMX_OBJECT_NAME = "org.quartz.scheduler.jmx.objectName";
+
+    public static final String PROP_SCHED_JMX_PROXY = "org.quartz.scheduler.jmx.proxy";
+
+    public static final String PROP_SCHED_JMX_PROXY_CLASS = "org.quartz.scheduler.jmx.proxy.class";
     
     public static final String PROP_SCHED_RMI_EXPORT = "org.quartz.scheduler.rmi.export";
 
@@ -138,6 +166,8 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
     public static final String PROP_SCHED_RMI_CREATE_REGISTRY = "org.quartz.scheduler.rmi.createRegistry";
 
+    public static final String PROP_SCHED_RMI_BIND_NAME = "org.quartz.scheduler.rmi.bindName";
+
     public static final String PROP_SCHED_WRAP_JOB_IN_USER_TX = "org.quartz.scheduler.wrapJobExecutionInUserTransaction";
 
     public static final String PROP_SCHED_USER_TX_URL = "org.quartz.scheduler.userTransactionURL";
@@ -146,11 +176,19 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
     public static final String PROP_SCHED_DB_FAILURE_RETRY_INTERVAL = "org.quartz.scheduler.dbFailureRetryInterval";
 
+    public static final String PROP_SCHED_MAKE_SCHEDULER_THREAD_DAEMON = "org.quartz.scheduler.makeSchedulerThreadDaemon";
+
+    public static final String PROP_SCHED_SCHEDULER_THREADS_INHERIT_CONTEXT_CLASS_LOADER_OF_INITIALIZING_THREAD = "org.quartz.scheduler.threadsInheritContextClassLoaderOfInitializer";
+
     public static final String PROP_SCHED_CLASS_LOAD_HELPER_CLASS = "org.quartz.scheduler.classLoadHelper.class";
 
     public static final String PROP_SCHED_JOB_FACTORY_CLASS = "org.quartz.scheduler.jobFactory.class";
 
     public static final String PROP_SCHED_JOB_FACTORY_PREFIX = "org.quartz.scheduler.jobFactory";
+
+    public static final String PROP_SCHED_INTERRUPT_JOBS_ON_SHUTDOWN = "org.quartz.scheduler.interruptJobsOnShutdown";
+
+    public static final String PROP_SCHED_INTERRUPT_JOBS_ON_SHUTDOWN_WITH_WAIT = "org.quartz.scheduler.interruptJobsOnShutdownWithWait";
 
     public static final String PROP_SCHED_CONTEXT_PREFIX = "org.quartz.context.key";
 
@@ -160,6 +198,14 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
     public static final String PROP_JOB_STORE_PREFIX = "org.quartz.jobStore";
 
+    public static final String PROP_JOB_STORE_LOCK_HANDLER_PREFIX = PROP_JOB_STORE_PREFIX + ".lockHandler";
+
+    public static final String PROP_JOB_STORE_LOCK_HANDLER_CLASS = PROP_JOB_STORE_LOCK_HANDLER_PREFIX + ".class";
+
+    public static final String PROP_TABLE_PREFIX = "tablePrefix";
+
+    public static final String PROP_SCHED_NAME = "schedName";
+
     public static final String PROP_JOB_STORE_CLASS = "org.quartz.jobStore.class";
 
     public static final String PROP_JOB_STORE_USE_PROP = "org.quartz.jobStore.useProperties";
@@ -168,16 +214,40 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
     public static final String PROP_CONNECTION_PROVIDER_CLASS = "connectionProvider.class";
 
+    /**
+     * @deprecated Replaced with {@link PoolingConnectionProvider#DB_DRIVER}
+     */
+    @Deprecated
     public static final String PROP_DATASOURCE_DRIVER = "driver";
 
+    /**
+     * @deprecated Replaced with {@link PoolingConnectionProvider#DB_URL}
+     */
+    @Deprecated
     public static final String PROP_DATASOURCE_URL = "URL";
 
+    /**
+     * @deprecated Replaced with {@link PoolingConnectionProvider#DB_USER}
+     */
+    @Deprecated
     public static final String PROP_DATASOURCE_USER = "user";
 
+    /**
+     * @deprecated Replaced with {@link PoolingConnectionProvider#DB_PASSWORD}
+     */
+    @Deprecated
     public static final String PROP_DATASOURCE_PASSWORD = "password";
 
+    /**
+     * @deprecated Replaced with {@link PoolingConnectionProvider#DB_MAX_CONNECTIONS}
+     */
+    @Deprecated
     public static final String PROP_DATASOURCE_MAX_CONNECTIONS = "maxConnections";
 
+    /**
+     * @deprecated Replaced with {@link PoolingConnectionProvider#DB_VALIDATION_QUERY}
+     */
+    @Deprecated
     public static final String PROP_DATASOURCE_VALIDATION_QUERY = "validationQuery";
 
     public static final String PROP_DATASOURCE_JNDI_URL = "jndiURL";
@@ -206,11 +276,21 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
     public static final String AUTO_GENERATE_INSTANCE_ID = "AUTO";
 
+    public static final String PROP_THREAD_EXECUTOR = "org.quartz.threadExecutor";
+
+    public static final String PROP_THREAD_EXECUTOR_CLASS = "org.quartz.threadExecutor.class";
+
+    public static final String SYSTEM_PROPERTY_AS_INSTANCE_ID = "SYS_PROP";
+    
+    public static final String MANAGEMENT_REST_SERVICE_ENABLED = "org.quartz.managementRESTService.enabled";
+
+    public static final String MANAGEMENT_REST_SERVICE_HOST_PORT = "org.quartz.managementRESTService.bind";
+
     /*
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-     * 
+     *
      * Data members.
-     * 
+     *
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      */
 
@@ -220,45 +300,63 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
     private PropertiesParser cfg;
 
+    private final Logger log = LoggerFactory.getLogger(getClass());
+
     //  private Scheduler scheduler;
 
     /*
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-     * 
+     *
      * Constructors.
-     * 
+     *
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      */
 
+    /**
+     * Create an uninitialized StdSchedulerFactory.
+     */
     public StdSchedulerFactory() {
     }
 
+    /**
+     * Create a StdSchedulerFactory that has been initialized via
+     * <code>{@link #initialize(Properties)}</code>.
+     *
+     * @see #initialize(Properties)
+     */
     public StdSchedulerFactory(Properties props) throws SchedulerException {
         initialize(props);
     }
 
+    /**
+     * Create a StdSchedulerFactory that has been initialized via
+     * <code>{@link #initialize(String)}</code>.
+     *
+     * @see #initialize(String)
+     */
     public StdSchedulerFactory(String fileName) throws SchedulerException {
         initialize(fileName);
     }
 
     /*
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-     * 
+     *
      * Interface.
-     * 
+     *
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      */
 
-    public static Log getLog() {
-        return LogFactory.getLog(StdSchedulerFactory.class);
+    public Logger getLog() {
+        return log;
     }
 
     /**
      * <p>
      * Initialize the <code>{@link org.quartz.SchedulerFactory}</code> with
-     * the contenents of a <code>Properties</code> file.
+     * the contents of a <code>Properties</code> file and overriding System
+     * properties.
      * </p>
-     * 
+     *
      * <p>
      * By default a properties file named "quartz.properties" is loaded from
      * the 'current working directory'. If that fails, then the
@@ -267,17 +365,23 @@ public class StdSchedulerFactory implements SchedulerFactory {
      * you must define the system property 'org.quartz.properties' to point to
      * the file you want.
      * </p>
-     * 
+     *
      * <p>
-     * System properties (envrionment variables, and -D definitions on the
-     * command-line when running the JVM) over-ride any properties in the
-     * loaded file.
+     * System properties (environment variables, and -D definitions on the
+     * command-line when running the JVM) override any properties in the
+     * loaded file.  For this reason, you may want to use a different initialize()
+     * method if your application security policy prohibits access to
+     * <code>{@link java.lang.System#getProperties()}</code>.
      * </p>
      */
     public void initialize() throws SchedulerException {
         // short-circuit if already initialized
-        if (cfg != null) return;
-        if (initException != null) throw initException;
+        if (cfg != null) {
+            return;
+        }
+        if (initException != null) {
+            throw initException;
+        }
 
         String requestedFile = System.getProperty(PROPERTIES_FILE);
         String propFileName = requestedFile != null ? requestedFile
@@ -286,77 +390,111 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
         Properties props = new Properties();
 
-        if (propFile.exists()) {
-            try {
-                if (requestedFile != null) propSrc = "specified file: '"
-                        + requestedFile + "'";
-                else
-                    propSrc = "default file in current working dir: 'quartz.properties'";
+        InputStream in = null;
 
-                props.load(new BufferedInputStream(new FileInputStream(
-                        propFileName)));
+        try {
+            if (propFile.exists()) {
+                try {
+                    if (requestedFile != null) {
+                        propSrc = "specified file: '" + requestedFile + "'";
+                    } else {
+                        propSrc = "default file in current working dir: 'quartz.properties'";
+                    }
 
-                initialize(overRideWithSysProps(props));
-            } catch (IOException ioe) {
-                initException = new SchedulerException("Properties file: '"
-                        + propFileName + "' could not be read.", ioe);
-                throw initException;
-            }
-        } else if (requestedFile != null) {
-            InputStream in = 
-                Thread.currentThread().getContextClassLoader().getResourceAsStream(requestedFile);
+                    in = new BufferedInputStream(new FileInputStream(propFileName));
+                    props.load(in);
 
-            if(in == null) {
-            initException = new SchedulerException("Properties file: '"
-                    + requestedFile + "' could not be found.");
-            throw initException;
-            }
-            
-            propSrc = "specified file: '" + requestedFile + "' in the class resource path.";
-            
-            try {
-                props.load(new BufferedInputStream(in));
-                initialize(overRideWithSysProps(props));
-            } catch (IOException ioe) {
-                initException = new SchedulerException("Properties file: '"
-                        + requestedFile + "' could not be read.", ioe);
-                throw initException;
-            }
-            
-        } else {
-            propSrc = "default resource file in Quartz package: 'quartz.properties'";
+                } catch (IOException ioe) {
+                    initException = new SchedulerException("Properties file: '"
+                            + propFileName + "' could not be read.", ioe);
+                    throw initException;
+                }
+            } else if (requestedFile != null) {
+                in =
+                    Thread.currentThread().getContextClassLoader().getResourceAsStream(requestedFile);
 
-            InputStream in = getClass().getClassLoader().getResourceAsStream(
-                    "quartz.properties");
+                if(in == null) {
+                    initException = new SchedulerException("Properties file: '"
+                        + requestedFile + "' could not be found.");
+                    throw initException;
+                }
 
-            if (in == null)
-                    in = getClass().getClassLoader().getResourceAsStream(
+                propSrc = "specified file: '" + requestedFile + "' in the class resource path.";
+
+                in = new BufferedInputStream(in);
+                try {
+                    props.load(in);
+                } catch (IOException ioe) {
+                    initException = new SchedulerException("Properties file: '"
+                            + requestedFile + "' could not be read.", ioe);
+                    throw initException;
+                }
+
+            } else {
+                propSrc = "default resource file in Quartz package: 'quartz.properties'";
+
+                ClassLoader cl = getClass().getClassLoader();
+                if(cl == null)
+                    cl = findClassloader();
+                if(cl == null)
+                    throw new SchedulerConfigException("Unable to find a class loader on the current thread or class.");
+
+                in = cl.getResourceAsStream(
+                        "quartz.properties");
+
+                if (in == null) {
+                    in = cl.getResourceAsStream(
                             "/quartz.properties");
-            if (in == null)
-                    in = getClass().getClassLoader().getResourceAsStream(
+                }
+                if (in == null) {
+                    in = cl.getResourceAsStream(
                             "org/quartz/quartz.properties");
-            if (in == null) {
-                initException = new SchedulerException(
-                        "Default quartz.properties not found in class path");
-                throw initException;
+                }
+                if (in == null) {
+                    initException = new SchedulerException(
+                            "Default quartz.properties not found in class path");
+                    throw initException;
+                }
+                try {
+                    props.load(in);
+                } catch (IOException ioe) {
+                    initException = new SchedulerException(
+                            "Resource properties file: 'org/quartz/quartz.properties' "
+                                    + "could not be read from the classpath.", ioe);
+                    throw initException;
+                }
             }
-            try {
-                props.load(in);
-            } catch (IOException ioe) {
-                initException = new SchedulerException(
-                        "Resource properties file: 'org/quartz/quartz.properties' "
-                                + "could not be read from the classpath.", ioe);
-                throw initException;
+        } finally {
+            if(in != null) {
+                try { in.close(); } catch(IOException ignore) { /* ignore */ }
             }
-
-            initialize(overRideWithSysProps(props));
         }
+
+        initialize(overrideWithSysProps(props));
     }
 
-    private Properties overRideWithSysProps(Properties props) {
+    /**
+     * Add all System properties to the given <code>props</code>.  Will override
+     * any properties that already exist in the given <code>props</code>.
+     */
+    private Properties overrideWithSysProps(Properties props) {
+        Properties sysProps = null;
+        try {
+            sysProps = System.getProperties();
+        } catch (AccessControlException e) {
+            getLog().warn(
+                "Skipping overriding quartz properties with System properties " +
+                "during initialization because of an AccessControlException.  " +
+                "This is likely due to not having read/write access for " +
+                "java.util.PropertyPermission as required by java.lang.System.getProperties().  " +
+                "To resolve this warning, either add this permission to your policy file or " +
+                "use a non-default version of initialize().",
+                e);
+        }
 
-        Properties sysProps = System.getProperties();
-        props.putAll(sysProps);
+        if (sysProps != null) {
+            props.putAll(sysProps);
+        }
 
         return props;
     }
@@ -364,34 +502,42 @@ public class StdSchedulerFactory implements SchedulerFactory {
     /**
      * <p>
      * Initialize the <code>{@link org.quartz.SchedulerFactory}</code> with
-     * the contenents of the <code>Properties</code> file with the given
+     * the contents of the <code>Properties</code> file with the given
      * name.
      * </p>
      */
     public void initialize(String filename) throws SchedulerException {
         // short-circuit if already initialized
-        if (cfg != null) return;
-        if (initException != null) throw initException;
+        if (cfg != null) {
+            return;
+        }
+
+        if (initException != null) {
+            throw initException;
+        }
 
         InputStream is = null;
         Properties props = new Properties();
 
         is = Thread.currentThread().getContextClassLoader().getResourceAsStream(filename);
-         
+
         try {
             if(is != null) {
                 is = new BufferedInputStream(is);
                 propSrc = "the specified file : '" + filename + "' from the class resource path.";
-            }
-            else {
-            is = new BufferedInputStream(new FileInputStream(filename));
-            propSrc = "the specified file : '" + filename + "'";
+            } else {
+                is = new BufferedInputStream(new FileInputStream(filename));
+                propSrc = "the specified file : '" + filename + "'";
             }
             props.load(is);
         } catch (IOException ioe) {
             initException = new SchedulerException("Properties file: '"
                     + filename + "' could not be read.", ioe);
             throw initException;
+        }
+        finally {
+            if(is != null)
+                try { is.close(); } catch(IOException ignore) {}
         }
 
         initialize(props);
@@ -400,15 +546,20 @@ public class StdSchedulerFactory implements SchedulerFactory {
     /**
      * <p>
      * Initialize the <code>{@link org.quartz.SchedulerFactory}</code> with
-     * the contenents of the <code>Properties</code> file opened with the
+     * the contents of the <code>Properties</code> file opened with the
      * given <code>InputStream</code>.
      * </p>
      */
     public void initialize(InputStream propertiesStream)
-            throws SchedulerException {
+        throws SchedulerException {
         // short-circuit if already initialized
-        if (cfg != null) return;
-        if (initException != null) throw initException;
+        if (cfg != null) {
+            return;
+        }
+
+        if (initException != null) {
+            throw initException;
+        }
 
         Properties props = new Properties();
 
@@ -433,28 +584,29 @@ public class StdSchedulerFactory implements SchedulerFactory {
     /**
      * <p>
      * Initialize the <code>{@link org.quartz.SchedulerFactory}</code> with
-     * the contenents of the given <code>Properties</code> object.
+     * the contents of the given <code>Properties</code> object.
      * </p>
      */
     public void initialize(Properties props) throws SchedulerException {
-        if (propSrc == null)
-                propSrc = "an externally provided properties instance.";
+        if (propSrc == null) {
+            propSrc = "an externally provided properties instance.";
+        }
 
         this.cfg = new PropertiesParser(props);
     }
 
-    /**
-     *  
-     */
     private Scheduler instantiate() throws SchedulerException {
-        if (cfg == null) initialize();
+        if (cfg == null) {
+            initialize();
+        }
 
-        if (initException != null) throw initException;
+        if (initException != null) {
+            throw initException;
+        }
 
         JobStore js = null;
         ThreadPool tp = null;
         QuartzScheduler qs = null;
-        SchedulingContext schedCtxt = null;
         DBConnectionManager dbMgr = null;
         String instanceIdGeneratorClass = null;
         Properties tProps = null;
@@ -462,9 +614,11 @@ public class StdSchedulerFactory implements SchedulerFactory {
         boolean wrapJobInTx = false;
         boolean autoId = false;
         long idleWaitTime = -1;
-        long dbFailureRetry = -1;
+        long dbFailureRetry = 15000L; // 15 secs
         String classLoadHelperClass;
         String jobFactoryClass;
+        ThreadExecutor threadExecutor;
+
 
         SchedulerRepository schedRep = SchedulerRepository.getInstance();
 
@@ -476,7 +630,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
         String threadName = cfg.getStringProperty(PROP_SCHED_THREAD_NAME,
                 schedName + "_QuartzSchedulerThread");
-        
+
         String schedInstId = cfg.getStringProperty(PROP_SCHED_INSTANCE_ID,
                 DEFAULT_INSTANCE_ID);
 
@@ -486,11 +640,17 @@ public class StdSchedulerFactory implements SchedulerFactory {
                     PROP_SCHED_INSTANCE_ID_GENERATOR_CLASS,
                     "org.quartz.simpl.SimpleInstanceIdGenerator");
         }
-        
+        else if (schedInstId.equals(SYSTEM_PROPERTY_AS_INSTANCE_ID)) {
+            autoId = true;
+            instanceIdGeneratorClass = 
+                    "org.quartz.simpl.SystemPropertyInstanceIdGenerator";
+        }
+
         userTXLocation = cfg.getStringProperty(PROP_SCHED_USER_TX_URL,
                 userTXLocation);
-        if (userTXLocation != null && userTXLocation.trim().length() == 0)
-                userTXLocation = null;
+        if (userTXLocation != null && userTXLocation.trim().length() == 0) {
+            userTXLocation = null;
+        }
 
         classLoadHelperClass = cfg.getStringProperty(
                 PROP_SCHED_CLASS_LOAD_HELPER_CLASS,
@@ -503,19 +663,50 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
         idleWaitTime = cfg.getLongProperty(PROP_SCHED_IDLE_WAIT_TIME,
                 idleWaitTime);
-        dbFailureRetry = cfg.getLongProperty(
-                PROP_SCHED_DB_FAILURE_RETRY_INTERVAL, dbFailureRetry);
+        if(idleWaitTime > -1 && idleWaitTime < 1000) {
+            throw new SchedulerException("org.quartz.scheduler.idleWaitTime of less than 1000ms is not legal.");
+        }
+        
+        dbFailureRetry = cfg.getLongProperty(PROP_SCHED_DB_FAILURE_RETRY_INTERVAL, dbFailureRetry);
+        if (dbFailureRetry < 0) {
+            throw new SchedulerException(PROP_SCHED_DB_FAILURE_RETRY_INTERVAL + " of less than 0 ms is not legal.");
+        }
 
-        boolean rmiExport = cfg
-                .getBooleanProperty(PROP_SCHED_RMI_EXPORT, false);
+        boolean makeSchedulerThreadDaemon =
+            cfg.getBooleanProperty(PROP_SCHED_MAKE_SCHEDULER_THREAD_DAEMON);
+
+        boolean threadsInheritInitalizersClassLoader =
+            cfg.getBooleanProperty(PROP_SCHED_SCHEDULER_THREADS_INHERIT_CONTEXT_CLASS_LOADER_OF_INITIALIZING_THREAD);
+
+        boolean skipUpdateCheck = cfg.getBooleanProperty(PROP_SCHED_SKIP_UPDATE_CHECK, false);
+        long batchTimeWindow = cfg.getLongProperty(PROP_SCHED_BATCH_TIME_WINDOW, 0L);
+        int maxBatchSize = cfg.getIntProperty(PROP_SCHED_MAX_BATCH_SIZE, 1);
+
+        boolean interruptJobsOnShutdown = cfg.getBooleanProperty(PROP_SCHED_INTERRUPT_JOBS_ON_SHUTDOWN, false);
+        boolean interruptJobsOnShutdownWithWait = cfg.getBooleanProperty(PROP_SCHED_INTERRUPT_JOBS_ON_SHUTDOWN_WITH_WAIT, false);
+
+        boolean jmxExport = cfg.getBooleanProperty(PROP_SCHED_JMX_EXPORT);
+        String jmxObjectName = cfg.getStringProperty(PROP_SCHED_JMX_OBJECT_NAME);
+        
+        boolean jmxProxy = cfg.getBooleanProperty(PROP_SCHED_JMX_PROXY);
+        String jmxProxyClass = cfg.getStringProperty(PROP_SCHED_JMX_PROXY_CLASS);
+
+        boolean rmiExport = cfg.getBooleanProperty(PROP_SCHED_RMI_EXPORT, false);
         boolean rmiProxy = cfg.getBooleanProperty(PROP_SCHED_RMI_PROXY, false);
-        String rmiHost = cfg
-                .getStringProperty(PROP_SCHED_RMI_HOST, "localhost");
+        String rmiHost = cfg.getStringProperty(PROP_SCHED_RMI_HOST, "localhost");
         int rmiPort = cfg.getIntProperty(PROP_SCHED_RMI_PORT, 1099);
         int rmiServerPort = cfg.getIntProperty(PROP_SCHED_RMI_SERVER_PORT, -1);
         String rmiCreateRegistry = cfg.getStringProperty(
                 PROP_SCHED_RMI_CREATE_REGISTRY,
                 QuartzSchedulerResources.CREATE_REGISTRY_NEVER);
+        String rmiBindName = cfg.getStringProperty(PROP_SCHED_RMI_BIND_NAME);
+
+        if (jmxProxy && rmiProxy) {
+            throw new SchedulerConfigException("Cannot proxy both RMI and JMX.");
+        }
+        
+        boolean managementRESTServiceEnabled = cfg.getBooleanProperty(MANAGEMENT_REST_SERVICE_ENABLED, false);
+        String managementRESTServiceHostAndPort = cfg.getStringProperty(MANAGEMENT_REST_SERVICE_HOST_PORT, "0.0.0.0:9889");
 
         Properties schedCtxtProps = cfg.getPropertyGroup(PROP_SCHED_CONTEXT_PREFIX, true);
 
@@ -523,22 +714,20 @@ public class StdSchedulerFactory implements SchedulerFactory {
         // ~~~~~~~~~~~~~~~~~~
         if (rmiProxy) {
 
-            if (autoId)  
+            if (autoId) {
                 schedInstId = DEFAULT_INSTANCE_ID;
-                
-            schedCtxt = new SchedulingContext();
-            schedCtxt.setInstanceId(schedInstId);
+            }
 
-            String uid = QuartzSchedulerResources.getUniqueIdentifier(
-                    schedName, schedInstId);
+            String uid = (rmiBindName == null) ? QuartzSchedulerResources.getUniqueIdentifier(
+                    schedName, schedInstId) : rmiBindName;
 
-            RemoteScheduler remoteScheduler = new RemoteScheduler(schedCtxt,
-                    uid, rmiHost, rmiPort);
+            RemoteScheduler remoteScheduler = new RemoteScheduler(uid, rmiHost, rmiPort);
 
             schedRep.bind(remoteScheduler);
 
             return remoteScheduler;
         }
+
 
         // Create class load helper
         ClassLoadHelper loadHelper = null;
@@ -551,6 +740,49 @@ public class StdSchedulerFactory implements SchedulerFactory {
                             + e.getMessage(), e);
         }
         loadHelper.initialize();
+
+        // If Proxying to remote JMX scheduler, short-circuit here...
+        // ~~~~~~~~~~~~~~~~~~
+        if (jmxProxy) {
+            if (autoId) {
+                schedInstId = DEFAULT_INSTANCE_ID;
+            }
+
+            if (jmxProxyClass == null) {
+                throw new SchedulerConfigException("No JMX Proxy Scheduler class provided");
+            }
+
+            RemoteMBeanScheduler jmxScheduler = null;
+            try {
+                jmxScheduler = (RemoteMBeanScheduler)loadHelper.loadClass(jmxProxyClass)
+                        .newInstance();
+            } catch (Exception e) {
+                throw new SchedulerConfigException(
+                        "Unable to instantiate RemoteMBeanScheduler class.", e);
+            }
+
+            if (jmxObjectName == null) {
+                jmxObjectName = QuartzSchedulerResources.generateJMXObjectName(schedName, schedInstId);
+            }
+
+            jmxScheduler.setSchedulerObjectName(jmxObjectName);
+
+            tProps = cfg.getPropertyGroup(PROP_SCHED_JMX_PROXY, true);
+            try {
+                setBeanProps(jmxScheduler, tProps);
+            } catch (Exception e) {
+                initException = new SchedulerException("RemoteMBeanScheduler class '"
+                        + jmxProxyClass + "' props could not be configured.", e);
+                throw initException;
+            }
+
+            jmxScheduler.initialize();
+
+            schedRep.bind(jmxScheduler);
+
+            return jmxScheduler;
+        }
+
         
         JobFactory jobFactory = null;
         if(jobFactoryClass != null) {
@@ -569,12 +801,10 @@ public class StdSchedulerFactory implements SchedulerFactory {
             } catch (Exception e) {
                 initException = new SchedulerException("JobFactory class '"
                         + jobFactoryClass + "' props could not be configured.", e);
-                initException
-                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
-        }        
-        
+        }
+
         InstanceIdGenerator instanceIdGenerator = null;
         if(instanceIdGeneratorClass != null) {
             try {
@@ -585,17 +815,25 @@ public class StdSchedulerFactory implements SchedulerFactory {
                         "Unable to instantiate InstanceIdGenerator class: "
                         + e.getMessage(), e);
             }
-        }               
-        
+
+            tProps = cfg.getPropertyGroup(PROP_SCHED_INSTANCE_ID_GENERATOR_PREFIX, true);
+            try {
+                setBeanProps(instanceIdGenerator, tProps);
+            } catch (Exception e) {
+                initException = new SchedulerException("InstanceIdGenerator class '"
+                        + instanceIdGeneratorClass + "' props could not be configured.", e);
+                throw initException;
+            }
+        }
+
         // Get ThreadPool Properties
         // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-        String tpClass = cfg.getStringProperty(PROP_THREAD_POOL_CLASS, null);
+        String tpClass = cfg.getStringProperty(PROP_THREAD_POOL_CLASS, SimpleThreadPool.class.getName());
 
         if (tpClass == null) {
             initException = new SchedulerException(
-                    "ThreadPool class not specified. ",
-                    SchedulerException.ERR_BAD_CONFIGURATION);
+                    "ThreadPool class not specified. ");
             throw initException;
         }
 
@@ -604,8 +842,6 @@ public class StdSchedulerFactory implements SchedulerFactory {
         } catch (Exception e) {
             initException = new SchedulerException("ThreadPool class '"
                     + tpClass + "' could not be instantiated.", e);
-            initException
-                    .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
             throw initException;
         }
         tProps = cfg.getPropertyGroup(PROP_THREAD_POOL_PREFIX, true);
@@ -614,8 +850,6 @@ public class StdSchedulerFactory implements SchedulerFactory {
         } catch (Exception e) {
             initException = new SchedulerException("ThreadPool class '"
                     + tpClass + "' props could not be configured.", e);
-            initException
-                    .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
             throw initException;
         }
 
@@ -627,8 +861,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
 
         if (jsClass == null) {
             initException = new SchedulerException(
-                    "JobStore class not specified. ",
-                    SchedulerException.ERR_BAD_CONFIGURATION);
+                    "JobStore class not specified. ");
             throw initException;
         }
 
@@ -637,28 +870,55 @@ public class StdSchedulerFactory implements SchedulerFactory {
         } catch (Exception e) {
             initException = new SchedulerException("JobStore class '" + jsClass
                     + "' could not be instantiated.", e);
-            initException
-                    .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
             throw initException;
         }
-        tProps = cfg.getPropertyGroup(PROP_JOB_STORE_PREFIX, true);
+
+        SchedulerDetailsSetter.setDetails(js, schedName, schedInstId);
+
+        tProps = cfg.getPropertyGroup(PROP_JOB_STORE_PREFIX, true, new String[] {PROP_JOB_STORE_LOCK_HANDLER_PREFIX});
         try {
             setBeanProps(js, tProps);
         } catch (Exception e) {
             initException = new SchedulerException("JobStore class '" + jsClass
                     + "' props could not be configured.", e);
-            initException
-                    .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
             throw initException;
         }
 
-        if (js instanceof org.quartz.impl.jdbcjobstore.JobStoreSupport) {
-            ((org.quartz.impl.jdbcjobstore.JobStoreSupport) js)
-				.setInstanceId(schedInstId);
-            ((org.quartz.impl.jdbcjobstore.JobStoreSupport) js)
-            	.setInstanceName(schedName);
+        if (js instanceof JobStoreSupport) {
+            // Install custom lock handler (Semaphore)
+            String lockHandlerClass = cfg.getStringProperty(PROP_JOB_STORE_LOCK_HANDLER_CLASS);
+            if (lockHandlerClass != null) {
+                try {
+                    Semaphore lockHandler = (Semaphore)loadHelper.loadClass(lockHandlerClass).newInstance();
+
+                    tProps = cfg.getPropertyGroup(PROP_JOB_STORE_LOCK_HANDLER_PREFIX, true);
+
+                    // If this lock handler requires the table prefix, add it to its properties.
+                    if (lockHandler instanceof TablePrefixAware) {
+                        tProps.setProperty(
+                                PROP_TABLE_PREFIX, ((JobStoreSupport)js).getTablePrefix());
+                        tProps.setProperty(
+                                PROP_SCHED_NAME, schedName);
+                    }
+
+                    try {
+                        setBeanProps(lockHandler, tProps);
+                    } catch (Exception e) {
+                        initException = new SchedulerException("JobStore LockHandler class '" + lockHandlerClass
+                                + "' props could not be configured.", e);
+                        throw initException;
+                    }
+
+                    ((JobStoreSupport)js).setLockHandler(lockHandler);
+                    getLog().info("Using custom data access locking (synchronization): " + lockHandlerClass);
+                } catch (Exception e) {
+                    initException = new SchedulerException("JobStore LockHandler class '" + lockHandlerClass
+                            + "' could not be instantiated.", e);
+                    throw initException;
+                }
+            }
         }
-        
+
         // Set up any DataSources
         // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -677,8 +937,6 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 } catch (Exception e) {
                     initException = new SchedulerException("ConnectionProvider class '" + cpClass
                             + "' could not be instantiated.", e);
-                    initException
-                            .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                     throw initException;
                 }
 
@@ -686,64 +944,60 @@ public class StdSchedulerFactory implements SchedulerFactory {
                     // remove the class name, so it isn't attempted to be set
                     pp.getUnderlyingProperties().remove(
                             PROP_CONNECTION_PROVIDER_CLASS);
-                    
+
                     setBeanProps(cp, pp.getUnderlyingProperties());
+                    cp.initialize();
                 } catch (Exception e) {
                     initException = new SchedulerException("ConnectionProvider class '" + cpClass
                             + "' props could not be configured.", e);
-                    initException
-                            .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                     throw initException;
                 }
 
                 dbMgr = DBConnectionManager.getInstance();
                 dbMgr.addConnectionProvider(dsNames[i], cp);
-            }
-            else {
-                String dsDriver = pp
-                .getStringProperty(PROP_DATASOURCE_DRIVER, null);
-                String dsURL = pp.getStringProperty(PROP_DATASOURCE_URL, null);
-                boolean dsAlwaysLookup = pp.getBooleanProperty(
-                        PROP_DATASOURCE_JNDI_ALWAYS_LOOKUP, false);
-                String dsUser = pp.getStringProperty(PROP_DATASOURCE_USER, "");
-                String dsPass = pp.getStringProperty(PROP_DATASOURCE_PASSWORD, "");
-                int dsCnt = pp.getIntProperty(PROP_DATASOURCE_MAX_CONNECTIONS, 10);
-                String dsJndi = pp
-                        .getStringProperty(PROP_DATASOURCE_JNDI_URL, null);
-                String dsJndiInitial = pp.getStringProperty(
-                        PROP_DATASOURCE_JNDI_INITIAL, null);
-                String dsJndiProvider = pp.getStringProperty(
-                        PROP_DATASOURCE_JNDI_PROVDER, null);
-                String dsJndiPrincipal = pp.getStringProperty(
-                        PROP_DATASOURCE_JNDI_PRINCIPAL, null);
-                String dsJndiCredentials = pp.getStringProperty(
-                        PROP_DATASOURCE_JNDI_CREDENTIALS, null);
-                String dsValidation = pp.getStringProperty(
-                        PROP_DATASOURCE_VALIDATION_QUERY, null);
-        
+            } else {
+                String dsJndi = pp.getStringProperty(PROP_DATASOURCE_JNDI_URL, null);
+
                 if (dsJndi != null) {
+                    boolean dsAlwaysLookup = pp.getBooleanProperty(
+                            PROP_DATASOURCE_JNDI_ALWAYS_LOOKUP);
+                    String dsJndiInitial = pp.getStringProperty(
+                            PROP_DATASOURCE_JNDI_INITIAL);
+                    String dsJndiProvider = pp.getStringProperty(
+                            PROP_DATASOURCE_JNDI_PROVDER);
+                    String dsJndiPrincipal = pp.getStringProperty(
+                            PROP_DATASOURCE_JNDI_PRINCIPAL);
+                    String dsJndiCredentials = pp.getStringProperty(
+                            PROP_DATASOURCE_JNDI_CREDENTIALS);
                     Properties props = null;
                     if (null != dsJndiInitial || null != dsJndiProvider
                             || null != dsJndiPrincipal || null != dsJndiCredentials) {
                         props = new Properties();
-                        if (dsJndiInitial != null)
-                                props.put(PROP_DATASOURCE_JNDI_INITIAL,
-                                        dsJndiInitial);
-                        if (dsJndiProvider != null)
-                                props.put(PROP_DATASOURCE_JNDI_PROVDER,
-                                        dsJndiProvider);
-                        if (dsJndiPrincipal != null)
-                                props.put(PROP_DATASOURCE_JNDI_PRINCIPAL,
-                                        dsJndiPrincipal);
-                        if (dsJndiCredentials != null)
-                                props.put(PROP_DATASOURCE_JNDI_CREDENTIALS,
-                                        dsJndiCredentials);
+                        if (dsJndiInitial != null) {
+                            props.put(PROP_DATASOURCE_JNDI_INITIAL,
+                                    dsJndiInitial);
+                        }
+                        if (dsJndiProvider != null) {
+                            props.put(PROP_DATASOURCE_JNDI_PROVDER,
+                                    dsJndiProvider);
+                        }
+                        if (dsJndiPrincipal != null) {
+                            props.put(PROP_DATASOURCE_JNDI_PRINCIPAL,
+                                    dsJndiPrincipal);
+                        }
+                        if (dsJndiCredentials != null) {
+                            props.put(PROP_DATASOURCE_JNDI_CREDENTIALS,
+                                    dsJndiCredentials);
+                        }
                     }
                     JNDIConnectionProvider cp = new JNDIConnectionProvider(dsJndi,
                             props, dsAlwaysLookup);
                     dbMgr = DBConnectionManager.getInstance();
                     dbMgr.addConnectionProvider(dsNames[i], cp);
                 } else {
+                    String dsDriver = pp.getStringProperty(PoolingConnectionProvider.DB_DRIVER);
+                    String dsURL = pp.getStringProperty(PoolingConnectionProvider.DB_URL);
+
                     if (dsDriver == null) {
                         initException = new SchedulerException(
                                 "Driver not specified for DataSource: "
@@ -757,9 +1011,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
                         throw initException;
                     }
                     try {
-                        PoolingConnectionProvider cp = new PoolingConnectionProvider(
-                                dsDriver, dsURL, dsUser, dsPass, dsCnt,
-                                dsValidation);
+                        PoolingConnectionProvider cp = new PoolingConnectionProvider(pp.getUnderlyingProperties());
                         dbMgr = DBConnectionManager.getInstance();
                         dbMgr.addConnectionProvider(dsNames[i], cp);
                     } catch (SQLException sqle) {
@@ -769,9 +1021,9 @@ public class StdSchedulerFactory implements SchedulerFactory {
                         throw initException;
                     }
                 }
-                
+
             }
-            
+
         }
 
         // Set up any SchedulerPlugins
@@ -788,8 +1040,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
             if (plugInClass == null) {
                 initException = new SchedulerException(
                         "SchedulerPlugin class not specified for plugin '"
-                                + pluginNames[i] + "'",
-                        SchedulerException.ERR_BAD_CONFIGURATION);
+                                + pluginNames[i] + "'");
                 throw initException;
             }
             SchedulerPlugin plugin = null;
@@ -800,8 +1051,6 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 initException = new SchedulerException(
                         "SchedulerPlugin class '" + plugInClass
                                 + "' could not be instantiated.", e);
-                initException
-                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             try {
@@ -810,60 +1059,61 @@ public class StdSchedulerFactory implements SchedulerFactory {
                 initException = new SchedulerException(
                         "JobStore SchedulerPlugin '" + plugInClass
                                 + "' props could not be configured.", e);
-                initException
-                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
+
             plugins[i] = plugin;
         }
 
         // Set up any JobListeners
         // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-        Class[] strArg = new Class[] { String.class };
+        Class<?>[] strArg = new Class[] { String.class };
         String[] jobListenerNames = cfg.getPropertyGroups(PROP_JOB_LISTENER_PREFIX);
         JobListener[] jobListeners = new JobListener[jobListenerNames.length];
         for (int i = 0; i < jobListenerNames.length; i++) {
             Properties lp = cfg.getPropertyGroup(PROP_JOB_LISTENER_PREFIX + "."
                     + jobListenerNames[i], true);
-            
+
             String listenerClass = lp.getProperty(PROP_LISTENER_CLASS, null);
 
             if (listenerClass == null) {
                 initException = new SchedulerException(
                         "JobListener class not specified for listener '"
-                                + jobListenerNames[i] + "'",
-                        SchedulerException.ERR_BAD_CONFIGURATION);
+                                + jobListenerNames[i] + "'");
                 throw initException;
             }
             JobListener listener = null;
             try {
-               listener = (JobListener)
+                listener = (JobListener)
                        loadHelper.loadClass(listenerClass).newInstance();
             } catch (Exception e) {
                 initException = new SchedulerException(
                         "JobListener class '" + listenerClass
                                 + "' could not be instantiated.", e);
-                initException
-                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             try {
-                Method nameSetter = listener.getClass().getMethod("setName", strArg);
-                if(nameSetter != null)
+                Method nameSetter = null;
+                try { 
+                    nameSetter = listener.getClass().getMethod("setName", strArg);
+                }
+                catch(NoSuchMethodException ignore) { 
+                    /* do nothing */ 
+                }
+                if(nameSetter != null) {
                     nameSetter.invoke(listener, new Object[] {jobListenerNames[i] } );
+                }
                 setBeanProps(listener, lp);
             } catch (Exception e) {
                 initException = new SchedulerException(
                         "JobListener '" + listenerClass
                                 + "' props could not be configured.", e);
-                initException
-                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             jobListeners[i] = listener;
         }
-               
+
         // Set up any TriggerListeners
         // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -872,172 +1122,270 @@ public class StdSchedulerFactory implements SchedulerFactory {
         for (int i = 0; i < triggerListenerNames.length; i++) {
             Properties lp = cfg.getPropertyGroup(PROP_TRIGGER_LISTENER_PREFIX + "."
                     + triggerListenerNames[i], true);
-            
+
             String listenerClass = lp.getProperty(PROP_LISTENER_CLASS, null);
 
             if (listenerClass == null) {
                 initException = new SchedulerException(
                         "TriggerListener class not specified for listener '"
-                                + triggerListenerNames[i] + "'",
-                        SchedulerException.ERR_BAD_CONFIGURATION);
+                                + triggerListenerNames[i] + "'");
                 throw initException;
             }
             TriggerListener listener = null;
             try {
-               listener = (TriggerListener)
+                listener = (TriggerListener)
                        loadHelper.loadClass(listenerClass).newInstance();
             } catch (Exception e) {
                 initException = new SchedulerException(
                         "TriggerListener class '" + listenerClass
                                 + "' could not be instantiated.", e);
-                initException
-                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             try {
-                Method nameSetter = listener.getClass().getMethod("setName", strArg);
-                if(nameSetter != null)
+                Method nameSetter = null;
+                try { 
+                    nameSetter = listener.getClass().getMethod("setName", strArg);
+                }
+                catch(NoSuchMethodException ignore) { /* do nothing */ }
+                if(nameSetter != null) {
                     nameSetter.invoke(listener, new Object[] {triggerListenerNames[i] } );
+                }
                 setBeanProps(listener, lp);
             } catch (Exception e) {
                 initException = new SchedulerException(
                         "TriggerListener '" + listenerClass
                                 + "' props could not be configured.", e);
-                initException
-                        .setErrorCode(SchedulerException.ERR_BAD_CONFIGURATION);
                 throw initException;
             }
             triggerListeners[i] = listener;
         }
-                
-        
+
+        boolean tpInited = false;
+        boolean qsInited = false;
+
+
+        // Get ThreadExecutor Properties
+        // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+        String threadExecutorClass = cfg.getStringProperty(PROP_THREAD_EXECUTOR_CLASS);
+        if (threadExecutorClass != null) {
+            tProps = cfg.getPropertyGroup(PROP_THREAD_EXECUTOR, true);
+            try {
+                threadExecutor = (ThreadExecutor) loadHelper.loadClass(threadExecutorClass).newInstance();
+                log.info("Using custom implementation for ThreadExecutor: " + threadExecutorClass);
+
+                setBeanProps(threadExecutor, tProps);
+            } catch (Exception e) {
+                initException = new SchedulerException(
+                        "ThreadExecutor class '" + threadExecutorClass + "' could not be instantiated.", e);
+                throw initException;
+            }
+        } else {
+            log.info("Using default implementation for ThreadExecutor");
+            threadExecutor = new DefaultThreadExecutor();
+        }
+
+
+
         // Fire everything up
         // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-        JobRunShellFactory jrsf = null; // Create correct run-shell factory...
-        UserTransactionHelper userTxHelper = null;
-
-        if (wrapJobInTx)
-                userTxHelper = new UserTransactionHelper(userTXLocation);
-
-        if (wrapJobInTx) jrsf = new JTAJobRunShellFactory(userTxHelper);
-        else
-            jrsf = new StdJobRunShellFactory();
-
-        if (autoId) {
-            try {
-                schedInstId = DEFAULT_INSTANCE_ID;
-                if (js instanceof org.quartz.impl.jdbcjobstore.JobStoreSupport) {
-                    if(((org.quartz.impl.jdbcjobstore.JobStoreSupport) js) 
-                        .isClustered()) {
-                        schedInstId = instanceIdGenerator.generateInstanceId();                    
-                    }
-                }
-            } catch (Exception e) {
-                getLog().error("Couldn't generate instance Id!", e);
-                throw new IllegalStateException(
-                        "Cannot run without an instance id.");
+        try {
+                
+    
+            JobRunShellFactory jrsf = null; // Create correct run-shell factory...
+    
+            if (userTXLocation != null) {
+                UserTransactionHelper.setUserTxLocation(userTXLocation);
             }
-        }
+    
+            if (wrapJobInTx) {
+                jrsf = new JTAJobRunShellFactory();
+            } else {
+                jrsf = new JTAAnnotationAwareJobRunShellFactory();
+            }
+    
+            if (autoId) {
+                try {
+                  schedInstId = DEFAULT_INSTANCE_ID;
+                  if (js.isClustered()) {
+                      schedInstId = instanceIdGenerator.generateInstanceId();
+                  }
+                } catch (Exception e) {
+                    getLog().error("Couldn't generate instance Id!", e);
+                    throw new IllegalStateException("Cannot run without an instance id.");
+                }
+            }
 
-        if (js instanceof JobStoreSupport) {
-            JobStoreSupport jjs = (JobStoreSupport) js;
-            jjs.setInstanceId(schedInstId);
-            jjs.setDbRetryInterval(dbFailureRetry);
-        }
-        
-        QuartzSchedulerResources rsrcs = new QuartzSchedulerResources();
-        rsrcs.setName(schedName);
-        rsrcs.setThreadName(threadName);        
-        rsrcs.setInstanceId(schedInstId);
-        rsrcs.setJobRunShellFactory(jrsf);
+            if (js.getClass().getName().startsWith("org.terracotta.quartz")) {
+                try {
+                    String uuid = (String) js.getClass().getMethod("getUUID").invoke(js);
+                    if(schedInstId.equals(DEFAULT_INSTANCE_ID)) {
+                        schedInstId = "TERRACOTTA_CLUSTERED,node=" + uuid;
+                        if (jmxObjectName == null) {
+                            jmxObjectName = QuartzSchedulerResources.generateJMXObjectName(schedName, schedInstId);
+                        }
+                    } else if(jmxObjectName == null) {
+                        jmxObjectName = QuartzSchedulerResources.generateJMXObjectName(schedName, schedInstId + ",node=" + uuid);
+                    }
+                } catch(Exception e) {
+                    throw new RuntimeException("Problem obtaining node id from TerracottaJobStore.", e);
+                }
 
-        if (rmiExport) {
-            rsrcs.setRMIRegistryHost(rmiHost);
-            rsrcs.setRMIRegistryPort(rmiPort);
-            rsrcs.setRMIServerPort(rmiServerPort);
-            rsrcs.setRMICreateRegistryStrategy(rmiCreateRegistry);
-        }
-
-        rsrcs.setThreadPool(tp);
-        if(tp instanceof SimpleThreadPool)
-          ((SimpleThreadPool)tp).setThreadNamePrefix(schedName + "_Worker");
-        tp.initialize();
-        
-        rsrcs.setJobStore(js);
-
-        schedCtxt = new SchedulingContext();
-        schedCtxt.setInstanceId(rsrcs.getInstanceId());
-
-        qs = new QuartzScheduler(rsrcs, schedCtxt, idleWaitTime, dbFailureRetry);
-
-        //    if(usingJSCMT)
-        //      qs.setSignalOnSchedulingChange(false); // TODO: fixed? (don't need
-        // this any more?)
-
-        // Create Scheduler ref...
-        Scheduler scheduler = instantiate(rsrcs, qs);
-        
-        // set job factory if specified
-        if(jobFactory != null)
-            qs.setJobFactory(jobFactory);
-
-        // add plugins
-        for (int i = 0; i < plugins.length; i++) {
-            plugins[i].initialize(pluginNames[i], scheduler);
-            qs.addSchedulerPlugin(plugins[i]);
-        }
-        
-        // add listeners
-        for (int i = 0; i < jobListeners.length; i++) {
-            qs.addGlobalJobListener(jobListeners[i]);
-        }
-        for (int i = 0; i < triggerListeners.length; i++) {
-            qs.addGlobalTriggerListener(triggerListeners[i]);
-        }
-        
-        // set scheduler context data...
-        Iterator itr = schedCtxtProps.keySet().iterator();
-        while(itr.hasNext()) {
-            String key = (String) itr.next();
-            String val = schedCtxtProps.getProperty(key);
+                if(null == cfg.getStringProperty(PROP_SCHED_JMX_EXPORT)) {
+                    jmxExport = true;
+                }
+            }
             
-            scheduler.getContext().put(key, val);
+            if (js instanceof JobStoreSupport) {
+                JobStoreSupport jjs = (JobStoreSupport)js;
+                jjs.setDbRetryInterval(dbFailureRetry);
+                if(threadsInheritInitalizersClassLoader)
+                    jjs.setThreadsInheritInitializersClassLoadContext(threadsInheritInitalizersClassLoader);
+                
+                jjs.setThreadExecutor(threadExecutor);
+            }
+    
+            QuartzSchedulerResources rsrcs = new QuartzSchedulerResources();
+            rsrcs.setName(schedName);
+            rsrcs.setThreadName(threadName);
+            rsrcs.setInstanceId(schedInstId);
+            rsrcs.setJobRunShellFactory(jrsf);
+            rsrcs.setMakeSchedulerThreadDaemon(makeSchedulerThreadDaemon);
+            rsrcs.setThreadsInheritInitializersClassLoadContext(threadsInheritInitalizersClassLoader);
+            rsrcs.setRunUpdateCheck(!skipUpdateCheck);
+            rsrcs.setBatchTimeWindow(batchTimeWindow);
+            rsrcs.setMaxBatchSize(maxBatchSize);
+            rsrcs.setInterruptJobsOnShutdown(interruptJobsOnShutdown);
+            rsrcs.setInterruptJobsOnShutdownWithWait(interruptJobsOnShutdownWithWait);
+            rsrcs.setJMXExport(jmxExport);
+            rsrcs.setJMXObjectName(jmxObjectName);
+
+            if (managementRESTServiceEnabled) {
+                ManagementRESTServiceConfiguration managementRESTServiceConfiguration = new ManagementRESTServiceConfiguration();
+                managementRESTServiceConfiguration.setBind(managementRESTServiceHostAndPort);
+                managementRESTServiceConfiguration.setEnabled(managementRESTServiceEnabled);
+                rsrcs.setManagementRESTServiceConfiguration(managementRESTServiceConfiguration);
+            }
+    
+            if (rmiExport) {
+                rsrcs.setRMIRegistryHost(rmiHost);
+                rsrcs.setRMIRegistryPort(rmiPort);
+                rsrcs.setRMIServerPort(rmiServerPort);
+                rsrcs.setRMICreateRegistryStrategy(rmiCreateRegistry);
+                rsrcs.setRMIBindName(rmiBindName);
+            }
+    
+            SchedulerDetailsSetter.setDetails(tp, schedName, schedInstId);
+
+            rsrcs.setThreadExecutor(threadExecutor);
+            threadExecutor.initialize();
+
+            rsrcs.setThreadPool(tp);
+            if(tp instanceof SimpleThreadPool) {
+                if(threadsInheritInitalizersClassLoader)
+                    ((SimpleThreadPool)tp).setThreadsInheritContextClassLoaderOfInitializingThread(threadsInheritInitalizersClassLoader);
+            }
+            tp.initialize();
+            tpInited = true;
+    
+            rsrcs.setJobStore(js);
+    
+            // add plugins
+            for (int i = 0; i < plugins.length; i++) {
+                rsrcs.addSchedulerPlugin(plugins[i]);
+            }
+    
+            qs = new QuartzScheduler(rsrcs, idleWaitTime, dbFailureRetry);
+            qsInited = true;
+    
+            // Create Scheduler ref...
+            Scheduler scheduler = instantiate(rsrcs, qs);
+    
+            // set job factory if specified
+            if(jobFactory != null) {
+                qs.setJobFactory(jobFactory);
+            }
+    
+            // Initialize plugins now that we have a Scheduler instance.
+            for (int i = 0; i < plugins.length; i++) {
+                plugins[i].initialize(pluginNames[i], scheduler, loadHelper);
+            }
+    
+            // add listeners
+            for (int i = 0; i < jobListeners.length; i++) {
+                qs.getListenerManager().addJobListener(jobListeners[i], EverythingMatcher.allJobs());
+            }
+            for (int i = 0; i < triggerListeners.length; i++) {
+                qs.getListenerManager().addTriggerListener(triggerListeners[i], EverythingMatcher.allTriggers());
+            }
+    
+            // set scheduler context data...
+            for(Object key: schedCtxtProps.keySet()) {
+                String val = schedCtxtProps.getProperty((String) key);    
+                scheduler.getContext().put((String)key, val);
+            }
+    
+            // fire up job store, and runshell factory
+    
+            js.setInstanceId(schedInstId);
+            js.setInstanceName(schedName);
+            js.setThreadPoolSize(tp.getPoolSize());
+            js.initialize(loadHelper, qs.getSchedulerSignaler());
+
+            jrsf.initialize(scheduler);
+            
+            qs.initialize();
+    
+            getLog().info(
+                    "Quartz scheduler '" + scheduler.getSchedulerName()
+                            + "' initialized from " + propSrc);
+    
+            getLog().info("Quartz scheduler version: " + qs.getVersion());
+    
+            // prevents the repository from being garbage collected
+            qs.addNoGCObject(schedRep);
+            // prevents the db manager from being garbage collected
+            if (dbMgr != null) {
+                qs.addNoGCObject(dbMgr);
+            }
+    
+            schedRep.bind(scheduler);
+            return scheduler;
         }
-        
-        // fire up job store, and runshell factory
+        catch(SchedulerException e) {
+            shutdownFromInstantiateException(tp, qs, tpInited, qsInited);
+            throw e;
+        }
+        catch(RuntimeException re) {
+            shutdownFromInstantiateException(tp, qs, tpInited, qsInited);
+            throw re;
+        }
+        catch(Error re) {
+            shutdownFromInstantiateException(tp, qs, tpInited, qsInited);
+            throw re;
+        }
+    }
 
-        js.initialize(loadHelper, qs.getSchedulerSignaler());
-
-        jrsf.initialize(scheduler, schedCtxt);
-
-        getLog().info(
-                "Quartz scheduler '" + scheduler.getSchedulerName()
-                        + "' initialized from " + propSrc);
-
-        getLog().info("Quartz scheduler version: " + qs.getVersion());
-
-        // prevents the repository from being garbage collected
-        qs.addNoGCObject(schedRep);
-        // prevents the db manager from being garbage collected
-        if (dbMgr != null) qs.addNoGCObject(dbMgr);
-
-        schedRep.bind(scheduler);
-
-        return scheduler;
+    private void shutdownFromInstantiateException(ThreadPool tp, QuartzScheduler qs, boolean tpInited, boolean qsInited) {
+        try {
+            if(qsInited)
+                qs.shutdown(false);
+            else if(tpInited)
+                tp.shutdown(false);
+        } catch (Exception e) {
+            getLog().error("Got another exception while shutting down after instantiation exception", e);
+        }
     }
 
     protected Scheduler instantiate(QuartzSchedulerResources rsrcs, QuartzScheduler qs) {
-        SchedulingContext schedCtxt = new SchedulingContext();
-        schedCtxt.setInstanceId(rsrcs.getInstanceId());
-        
-        Scheduler scheduler = new StdScheduler(qs, schedCtxt);
+
+        Scheduler scheduler = new StdScheduler(qs);
         return scheduler;
     }
-    
+
 
     private void setBeanProps(Object obj, Properties props)
-            throws NoSuchMethodException, IllegalAccessException,
+        throws NoSuchMethodException, IllegalAccessException,
             java.lang.reflect.InvocationTargetException,
             IntrospectionException, SchedulerConfigException {
         props.remove("class");
@@ -1046,7 +1394,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
         PropertyDescriptor[] propDescs = bi.getPropertyDescriptors();
         PropertiesParser pp = new PropertiesParser(props);
 
-        java.util.Enumeration keys = props.keys();
+        java.util.Enumeration<Object> keys = props.keys();
         while (keys.hasMoreElements()) {
             String name = (String) keys.nextElement();
             String c = name.substring(0, 1).toUpperCase(Locale.US);
@@ -1055,38 +1403,44 @@ public class StdSchedulerFactory implements SchedulerFactory {
             java.lang.reflect.Method setMeth = getSetMethod(methName, propDescs);
 
             try {
-                if (setMeth == null)
-                        throw new NoSuchMethodException(
-                                "No setter for property '" + name + "'");
+                if (setMeth == null) {
+                    throw new NoSuchMethodException(
+                            "No setter for property '" + name + "'");
+                }
 
-                Class[] params = setMeth.getParameterTypes();
-                if (params.length != 1)
-                        throw new NoSuchMethodException(
-                                "No 1-argument setter for property '" + name
-                                        + "'");
-
+                Class<?>[] params = setMeth.getParameterTypes();
+                if (params.length != 1) {
+                    throw new NoSuchMethodException(
+                        "No 1-argument setter for property '" + name + "'");
+                }
+                
+                // does the property value reference another property's value? If so, swap to look at its value
+                PropertiesParser refProps = pp;
+                String refName = pp.getStringProperty(name);
+                if(refName != null && refName.startsWith("$@")) {
+                    refName =  refName.substring(2);
+                    refProps = cfg;
+                }
+                else
+                    refName = name;
+                
                 if (params[0].equals(int.class)) {
-                    setMeth.invoke(obj, new Object[]{new Integer(pp
-                            .getIntProperty(name))});
+                    setMeth.invoke(obj, new Object[]{Integer.valueOf(refProps.getIntProperty(refName))});
                 } else if (params[0].equals(long.class)) {
-                    setMeth.invoke(obj, new Object[]{new Long(pp
-                            .getLongProperty(name))});
+                    setMeth.invoke(obj, new Object[]{Long.valueOf(refProps.getLongProperty(refName))});
                 } else if (params[0].equals(float.class)) {
-                    setMeth.invoke(obj, new Object[]{new Float(pp
-                            .getFloatProperty(name))});
+                    setMeth.invoke(obj, new Object[]{Float.valueOf(refProps.getFloatProperty(refName))});
                 } else if (params[0].equals(double.class)) {
-                    setMeth.invoke(obj, new Object[]{new Double(pp
-                            .getDoubleProperty(name))});
+                    setMeth.invoke(obj, new Object[]{Double.valueOf(refProps.getDoubleProperty(refName))});
                 } else if (params[0].equals(boolean.class)) {
-                    setMeth.invoke(obj, new Object[]{new Boolean(pp
-                            .getBooleanProperty(name))});
+                    setMeth.invoke(obj, new Object[]{Boolean.valueOf(refProps.getBooleanProperty(refName))});
                 } else if (params[0].equals(String.class)) {
-                    setMeth.invoke(obj,
-                            new Object[]{pp.getStringProperty(name)});
-                } else
+                    setMeth.invoke(obj, new Object[]{refProps.getStringProperty(refName)});
+                } else {
                     throw new NoSuchMethodException(
                             "No primitive-type setter for property '" + name
                                     + "'");
+                }
             } catch (NumberFormatException nfe) {
                 throw new SchedulerConfigException("Could not parse property '"
                         + name + "' into correct data type: " + nfe.toString());
@@ -1099,37 +1453,46 @@ public class StdSchedulerFactory implements SchedulerFactory {
         for (int i = 0; i < props.length; i++) {
             java.lang.reflect.Method wMeth = props[i].getWriteMethod();
 
-            if (wMeth != null && wMeth.getName().equals(name)) return wMeth;
+            if (wMeth != null && wMeth.getName().equals(name)) {
+                return wMeth;
+            }
         }
 
         return null;
     }
 
-    private Class loadClass(String className) throws ClassNotFoundException {
+    private Class<?> loadClass(String className) throws ClassNotFoundException, SchedulerConfigException {
 
         try {
-            return Thread.currentThread().getContextClassLoader().loadClass(
-                    className);
+            ClassLoader cl = findClassloader();
+            if(cl != null)
+                return cl.loadClass(className);
+            throw new SchedulerConfigException("Unable to find a class loader on the current thread or class.");
         } catch (ClassNotFoundException e) {
-            return getClass().getClassLoader().loadClass(className);
+            if(getClass().getClassLoader() != null)
+                return getClass().getClassLoader().loadClass(className);
+            throw e;
         }
     }
-    
+
+    private ClassLoader findClassloader() {
+        // work-around set context loader for windows-service started jvms (QUARTZ-748)
+        if(Thread.currentThread().getContextClassLoader() == null && getClass().getClassLoader() != null) {
+            Thread.currentThread().setContextClassLoader(getClass().getClassLoader());
+        }
+        return Thread.currentThread().getContextClassLoader();
+    }
+
     private String getSchedulerName() {
         return cfg.getStringProperty(PROP_SCHED_INSTANCE_NAME,
                 "QuartzScheduler");
-    }
-
-    private String getSchedulerInstId() {
-        return cfg.getStringProperty(PROP_SCHED_INSTANCE_ID,
-                DEFAULT_INSTANCE_ID);
     }
 
     /**
      * <p>
      * Returns a handle to the Scheduler produced by this factory.
      * </p>
-     * 
+     *
      * <p>
      * If one of the <code>initialize</code> methods has not be previously
      * called, then the default (no-arg) <code>initialize()</code> method
@@ -1137,16 +1500,20 @@ public class StdSchedulerFactory implements SchedulerFactory {
      * </p>
      */
     public Scheduler getScheduler() throws SchedulerException {
-        if (cfg == null) initialize();
+        if (cfg == null) {
+            initialize();
+        }
 
         SchedulerRepository schedRep = SchedulerRepository.getInstance();
 
         Scheduler sched = schedRep.lookup(getSchedulerName());
 
         if (sched != null) {
-            if (sched.isShutdown()) schedRep.remove(getSchedulerName());
-            else
+            if (sched.isShutdown()) {
+                schedRep.remove(getSchedulerName());
+            } else {
                 return sched;
+            }
         }
 
         sched = instantiate();
@@ -1159,7 +1526,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
      * Returns a handle to the default Scheduler, creating it if it does not
      * yet exist.
      * </p>
-     * 
+     *
      * @see #initialize()
      */
     public static Scheduler getDefaultScheduler() throws SchedulerException {
@@ -1184,8 +1551,7 @@ public class StdSchedulerFactory implements SchedulerFactory {
      * StdSchedulerFactory instance.).
      * </p>
      */
-    public Collection getAllSchedulers() throws SchedulerException {
+    public Collection<Scheduler> getAllSchedulers() throws SchedulerException {
         return SchedulerRepository.getInstance().lookupAll();
     }
-
 }
