@@ -1,5 +1,5 @@
 /* 
- * Copyright 2004-2005 OpenSymphony 
+ * Copyright 2001-2009 Terracotta, Inc. 
  * 
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not 
  * use this file except in compliance with the License. You may obtain a copy 
@@ -15,20 +15,20 @@
  * 
  */
 
-/*
- * Previously Copyright (c) 2001-2004 James House
- */
 package org.quartz.plugins.history;
 
 import java.text.MessageFormat;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.quartz.JobExecutionContext;
 import org.quartz.Scheduler;
 import org.quartz.SchedulerException;
 import org.quartz.Trigger;
 import org.quartz.TriggerListener;
+import org.quartz.Trigger.CompletedExecutionInstruction;
+import org.quartz.impl.matchers.EverythingMatcher;
+import org.quartz.spi.ClassLoadHelper;
 import org.quartz.spi.SchedulerPlugin;
 
 /**
@@ -228,6 +228,8 @@ public class LoggingTriggerHistoryPlugin implements SchedulerPlugin,
 
     private String triggerCompleteMessage = "Trigger {1}.{0} completed firing job {6}.{5} at {4, date, HH:mm:ss MM/dd/yyyy} with resulting trigger instruction code: {9}";
 
+    private final Logger log = LoggerFactory.getLogger(getClass());
+
     /*
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      * 
@@ -247,8 +249,8 @@ public class LoggingTriggerHistoryPlugin implements SchedulerPlugin,
      * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      */
 
-    protected Log getLog() {
-        return LogFactory.getLog(LoggingTriggerHistoryPlugin.class);
+    protected Logger getLog() {
+        return log;
     }
 
     /**
@@ -327,11 +329,11 @@ public class LoggingTriggerHistoryPlugin implements SchedulerPlugin,
      * @throws SchedulerConfigException
      *           if there is an error initializing.
      */
-    public void initialize(String name, Scheduler scheduler)
-            throws SchedulerException {
-        this.name = name;
+    public void initialize(String pname, Scheduler scheduler, ClassLoadHelper classLoadHelper)
+        throws SchedulerException {
+        this.name = pname;
 
-        scheduler.addGlobalTriggerListener(this);
+        scheduler.getListenerManager().addTriggerListener(this,  EverythingMatcher.allTriggers());
     }
 
     public void start() {
@@ -374,11 +376,13 @@ public class LoggingTriggerHistoryPlugin implements SchedulerPlugin,
             return;
         } 
         
-        Object[] args = {trigger.getName(), trigger.getGroup(),
-                trigger.getPreviousFireTime(), trigger.getNextFireTime(),
-                new java.util.Date(), context.getJobDetail().getName(),
-                context.getJobDetail().getGroup(),
-                new Integer(context.getRefireCount())};
+        Object[] args = {
+            trigger.getKey().getName(), trigger.getKey().getGroup(),
+            trigger.getPreviousFireTime(), trigger.getNextFireTime(),
+            new java.util.Date(), context.getJobDetail().getKey().getName(),
+            context.getJobDetail().getKey().getGroup(),
+            Integer.valueOf(context.getRefireCount())
+        };
 
         getLog().info(MessageFormat.format(getTriggerFiredMessage(), args));
     }
@@ -388,34 +392,43 @@ public class LoggingTriggerHistoryPlugin implements SchedulerPlugin,
             return;
         } 
         
-        Object[] args = {trigger.getName(), trigger.getGroup(),
-                trigger.getPreviousFireTime(), trigger.getNextFireTime(),
-                new java.util.Date(), trigger.getJobGroup(),
-                trigger.getJobGroup(),};
+        Object[] args = {
+            trigger.getKey().getName(), trigger.getKey().getGroup(),
+            trigger.getPreviousFireTime(), trigger.getNextFireTime(),
+            new java.util.Date(), trigger.getJobKey().getName(),
+            trigger.getJobKey().getGroup()
+        };
 
         getLog().info(MessageFormat.format(getTriggerMisfiredMessage(), args));
     }
 
     public void triggerComplete(Trigger trigger, JobExecutionContext context,
-            int triggerInstructionCode) {
+            CompletedExecutionInstruction triggerInstructionCode) {
         if (!getLog().isInfoEnabled()) {
             return;
         } 
         
         String instrCode = "UNKNOWN";
-        if (triggerInstructionCode == Trigger.INSTRUCTION_DELETE_TRIGGER) instrCode = "DELETE TRIGGER";
-        else if (triggerInstructionCode == Trigger.INSTRUCTION_NOOP) instrCode = "DO NOTHING";
-        else if (triggerInstructionCode == Trigger.INSTRUCTION_RE_EXECUTE_JOB) instrCode = "RE-EXECUTE JOB";
-        else if (triggerInstructionCode == Trigger.INSTRUCTION_SET_ALL_JOB_TRIGGERS_COMPLETE) instrCode = "SET ALL OF JOB'S TRIGGERS COMPLETE";
-        else if (triggerInstructionCode == Trigger.INSTRUCTION_SET_TRIGGER_COMPLETE)
-                instrCode = "SET THIS TRIGGER COMPLETE";
+        if (triggerInstructionCode == CompletedExecutionInstruction.DELETE_TRIGGER) {
+            instrCode = "DELETE TRIGGER";
+        } else if (triggerInstructionCode == CompletedExecutionInstruction.NOOP) {
+            instrCode = "DO NOTHING";
+        } else if (triggerInstructionCode == CompletedExecutionInstruction.RE_EXECUTE_JOB) {
+            instrCode = "RE-EXECUTE JOB";
+        } else if (triggerInstructionCode == CompletedExecutionInstruction.SET_ALL_JOB_TRIGGERS_COMPLETE) {
+            instrCode = "SET ALL OF JOB'S TRIGGERS COMPLETE";
+        } else if (triggerInstructionCode == CompletedExecutionInstruction.SET_TRIGGER_COMPLETE) {
+            instrCode = "SET THIS TRIGGER COMPLETE";
+        }
 
-        Object[] args = {trigger.getName(), trigger.getGroup(),
-                trigger.getPreviousFireTime(), trigger.getNextFireTime(),
-                new java.util.Date(), context.getJobDetail().getName(),
-                context.getJobDetail().getGroup(),
-                new Integer(context.getRefireCount()),
-                new Integer(triggerInstructionCode), instrCode};
+        Object[] args = {
+            trigger.getKey().getName(), trigger.getKey().getGroup(),
+            trigger.getPreviousFireTime(), trigger.getNextFireTime(),
+            new java.util.Date(), context.getJobDetail().getKey().getName(),
+            context.getJobDetail().getKey().getGroup(),
+            Integer.valueOf(context.getRefireCount()),
+            triggerInstructionCode.toString(), instrCode
+        };
 
         getLog().info(MessageFormat.format(getTriggerCompleteMessage(), args));
     }
