@@ -1,5 +1,5 @@
 /* 
- * Copyright 2004-2005 OpenSymphony 
+ * Copyright 2001-2009 Terracotta, Inc. 
  * 
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not 
  * use this file except in compliance with the License. You may obtain a copy 
@@ -15,16 +15,13 @@
  * 
  */
 
-/*
- * Previously Copyright (c) 2001-2004 James House
- */
 package org.quartz.utils;
 
+import java.util.ArrayList;
 import java.util.Enumeration;
-import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Properties;
 import java.util.StringTokenizer;
-import java.util.Vector;
 
 /**
  * <p>
@@ -69,18 +66,29 @@ public class PropertiesParser {
         return props;
     }
 
+    /**
+     * Get the trimmed String value of the property with the given 
+     * <code>name</code>.  If the value the empty String (after
+     * trimming), then it returns null.
+     */
     public String getStringProperty(String name) {
-        String val = props.getProperty(name);
-        if (val == null) return null;
-        return val.trim();
+        return getStringProperty(name, null);
     }
 
+    /**
+     * Get the trimmed String value of the property with the given 
+     * <code>name</code> or the given default value if the value is 
+     * null or empty after trimming.
+     */
     public String getStringProperty(String name, String def) {
         String val = props.getProperty(name, def);
-        if (val == null) return def;
+        if (val == null) {
+            return def;
+        }
+        
         val = val.trim();
-        if (val.length() == 0) return def;
-        return val;
+        
+        return (val.length() == 0) ? def : val;
     }
 
     public String[] getStringArrayProperty(String name) {
@@ -89,44 +97,38 @@ public class PropertiesParser {
 
     public String[] getStringArrayProperty(String name, String[] def) {
         String vals = getStringProperty(name);
-        if (vals == null) return def;
-
-        if (vals != null && !vals.trim().equals("")) {
-            StringTokenizer stok = new StringTokenizer(vals, ",");
-            Vector strs = new Vector();
-            try {
-                while (stok.hasMoreTokens()) {
-                    strs.addElement(stok.nextToken());
-                }
-                String[] outStrs = new String[strs.size()];
-                for (int i = 0; i < strs.size(); i++)
-                    outStrs[i] = (String) strs.elementAt(i);
-                return outStrs;
-            } catch (Exception e) {
-                return def;
-            }
+        if (vals == null) {
+            return def;
         }
 
-        return def;
+        StringTokenizer stok = new StringTokenizer(vals, ",");
+        ArrayList<String> strs = new ArrayList<String>();
+        try {
+            while (stok.hasMoreTokens()) {
+                strs.add(stok.nextToken().trim());
+            }
+            
+            return (String[])strs.toArray(new String[strs.size()]);
+        } catch (Exception e) {
+            return def;
+        }
     }
 
     public boolean getBooleanProperty(String name) {
-        String val = getStringProperty(name);
-        if (val == null) return false;
-
-        return new Boolean(val).booleanValue();
+        return getBooleanProperty(name, false);
     }
 
     public boolean getBooleanProperty(String name, boolean def) {
         String val = getStringProperty(name);
-        if (val == null) return def;
-
-        return new Boolean(val).booleanValue();
+        
+        return (val == null) ? def : Boolean.valueOf(val).booleanValue();
     }
 
     public byte getByteProperty(String name) throws NumberFormatException {
         String val = getStringProperty(name);
-        if (val == null) throw new NumberFormatException(" null string");
+        if (val == null) {
+            throw new NumberFormatException(" null string");
+        }
 
         try {
             return Byte.parseByte(val);
@@ -136,9 +138,11 @@ public class PropertiesParser {
     }
 
     public byte getByteProperty(String name, byte def)
-            throws NumberFormatException {
+        throws NumberFormatException {
         String val = getStringProperty(name);
-        if (val == null) return def;
+        if (val == null) {
+            return def;
+        }
 
         try {
             return Byte.parseByte(val);
@@ -148,26 +152,19 @@ public class PropertiesParser {
     }
 
     public char getCharProperty(String name) {
-        String param = getStringProperty(name);
-        if (param == null) return '\0';
-
-        if (param.length() == 0) return '\0';
-
-        return param.charAt(0);
+        return getCharProperty(name, '\0');
     }
 
     public char getCharProperty(String name, char def) {
         String param = getStringProperty(name);
-        if (param == null) return def;
-
-        if (param.length() == 0) return def;
-
-        return param.charAt(0);
+        return  (param == null) ? def : param.charAt(0);
     }
 
     public double getDoubleProperty(String name) throws NumberFormatException {
         String val = getStringProperty(name);
-        if (val == null) throw new NumberFormatException(" null string");
+        if (val == null) {
+            throw new NumberFormatException(" null string");
+        }
 
         try {
             return Double.parseDouble(val);
@@ -177,9 +174,11 @@ public class PropertiesParser {
     }
 
     public double getDoubleProperty(String name, double def)
-            throws NumberFormatException {
+        throws NumberFormatException {
         String val = getStringProperty(name);
-        if (val == null) return def;
+        if (val == null) {
+            return def;
+        }
 
         try {
             return Double.parseDouble(val);
@@ -190,7 +189,9 @@ public class PropertiesParser {
 
     public float getFloatProperty(String name) throws NumberFormatException {
         String val = getStringProperty(name);
-        if (val == null) throw new NumberFormatException(" null string");
+        if (val == null) {
+            throw new NumberFormatException(" null string");
+        }
 
         try {
             return Float.parseFloat(val);
@@ -200,9 +201,11 @@ public class PropertiesParser {
     }
 
     public float getFloatProperty(String name, float def)
-            throws NumberFormatException {
+        throws NumberFormatException {
         String val = getStringProperty(name);
-        if (val == null) return def;
+        if (val == null) {
+            return def;
+        }
 
         try {
             return Float.parseFloat(val);
@@ -213,7 +216,9 @@ public class PropertiesParser {
 
     public int getIntProperty(String name) throws NumberFormatException {
         String val = getStringProperty(name);
-        if (val == null) throw new NumberFormatException(" null string");
+        if (val == null) {
+            throw new NumberFormatException(" null string");
+        }
 
         try {
             return Integer.parseInt(val);
@@ -223,9 +228,11 @@ public class PropertiesParser {
     }
 
     public int getIntProperty(String name, int def)
-            throws NumberFormatException {
+        throws NumberFormatException {
         String val = getStringProperty(name);
-        if (val == null) return def;
+        if (val == null) {
+            return def;
+        }
 
         try {
             return Integer.parseInt(val);
@@ -239,36 +246,38 @@ public class PropertiesParser {
     }
 
     public int[] getIntArrayProperty(String name, int[] def)
-            throws NumberFormatException {
+        throws NumberFormatException {
         String vals = getStringProperty(name);
-        if (vals == null) return def;
-
-        if (vals != null && !vals.trim().equals("")) {
-            StringTokenizer stok = new StringTokenizer(vals, ",");
-            Vector ints = new Vector();
-            try {
-                while (stok.hasMoreTokens()) {
-                    try {
-                        ints.addElement(new Integer(stok.nextToken()));
-                    } catch (NumberFormatException nfe) {
-                        throw new NumberFormatException(" '" + vals + "'");
-                    }
-                }
-                int[] outInts = new int[ints.size()];
-                for (int i = 0; i < ints.size(); i++)
-                    outInts[i] = ((Integer) ints.elementAt(i)).intValue();
-                return outInts;
-            } catch (Exception e) {
-                return def;
-            }
+        if (vals == null) {
+            return def;
         }
 
-        return def;
+        StringTokenizer stok = new StringTokenizer(vals, ",");
+        ArrayList<Integer> ints = new ArrayList<Integer>();
+        try {
+            while (stok.hasMoreTokens()) {
+                try {
+                    ints.add(new Integer(stok.nextToken().trim()));
+                } catch (NumberFormatException nfe) {
+                    throw new NumberFormatException(" '" + vals + "'");
+                }
+            }
+                        
+            int[] outInts = new int[ints.size()];
+            for (int i = 0; i < ints.size(); i++) {
+                outInts[i] = ((Integer)ints.get(i)).intValue();
+            }
+            return outInts;
+        } catch (Exception e) {
+            return def;
+        }
     }
 
     public long getLongProperty(String name) throws NumberFormatException {
         String val = getStringProperty(name);
-        if (val == null) throw new NumberFormatException(" null string");
+        if (val == null) {
+            throw new NumberFormatException(" null string");
+        }
 
         try {
             return Long.parseLong(val);
@@ -278,9 +287,11 @@ public class PropertiesParser {
     }
 
     public long getLongProperty(String name, long def)
-            throws NumberFormatException {
+        throws NumberFormatException {
         String val = getStringProperty(name);
-        if (val == null) return def;
+        if (val == null) {
+            return def;
+        }
 
         try {
             return Long.parseLong(val);
@@ -291,7 +302,9 @@ public class PropertiesParser {
 
     public short getShortProperty(String name) throws NumberFormatException {
         String val = getStringProperty(name);
-        if (val == null) throw new NumberFormatException(" null string");
+        if (val == null) {
+            throw new NumberFormatException(" null string");
+        }
 
         try {
             return Short.parseShort(val);
@@ -301,9 +314,11 @@ public class PropertiesParser {
     }
 
     public short getShortProperty(String name, short def)
-            throws NumberFormatException {
+        throws NumberFormatException {
         String val = getStringProperty(name);
-        if (val == null) return def;
+        if (val == null) {
+            return def;
+        }
 
         try {
             return Short.parseShort(val);
@@ -313,40 +328,76 @@ public class PropertiesParser {
     }
 
     public String[] getPropertyGroups(String prefix) {
-        Enumeration keys = props.propertyNames();
-        HashMap groups = new HashMap(10);
+        Enumeration<?> keys = props.propertyNames();
+        HashSet<String> groups = new HashSet<String>(10);
 
-        if (!prefix.endsWith(".")) prefix += ".";
+        if (!prefix.endsWith(".")) {
+            prefix += ".";
+        }
 
         while (keys.hasMoreElements()) {
             String key = (String) keys.nextElement();
             if (key.startsWith(prefix)) {
                 String groupName = key.substring(prefix.length(), key.indexOf(
                         '.', prefix.length()));
-                groups.put(groupName, groupName);
+                groups.add(groupName);
             }
         }
 
-        return (String[]) groups.values().toArray(new String[groups.size()]);
+        return (String[]) groups.toArray(new String[groups.size()]);
     }
 
     public Properties getPropertyGroup(String prefix) {
-        return getPropertyGroup(prefix, false);
+        return getPropertyGroup(prefix, false, null);
     }
 
     public Properties getPropertyGroup(String prefix, boolean stripPrefix) {
-        Enumeration keys = props.propertyNames();
+        return getPropertyGroup(prefix, stripPrefix, null);
+    }
+
+    /**
+     * Get all properties that start with the given prefix.  
+     * 
+     * @param prefix The prefix for which to search.  If it does not end in 
+     *      a "." then one will be added to it for search purposes.
+     * @param stripPrefix Whether to strip off the given <code>prefix</code>
+     *      in the result's keys.
+     * @param excludedPrefixes Optional array of fully qualified prefixes to
+     *      exclude.  For example if <code>prefix</code> is "a.b.c", then 
+     *      <code>excludedPrefixes</code> might be "a.b.c.ignore".
+     *      
+     * @return Group of <code>Properties</code> that start with the given prefix, 
+     *      optionally have that prefix removed, and do not include properties 
+     *      that start with one of the given excluded prefixes.
+     */
+    public Properties getPropertyGroup(String prefix, boolean stripPrefix, String[] excludedPrefixes) {
+        Enumeration<?> keys = props.propertyNames();
         Properties group = new Properties();
 
-        if (!prefix.endsWith(".")) prefix += ".";
+        if (!prefix.endsWith(".")) {
+            prefix += ".";
+        }
 
         while (keys.hasMoreElements()) {
             String key = (String) keys.nextElement();
             if (key.startsWith(prefix)) {
-                if (stripPrefix) group.put(key.substring(prefix.length()),
-                        props.getProperty(key));
-                else
-                    group.put(key, props.getProperty(key));
+                
+                boolean exclude = false;
+                if (excludedPrefixes != null) {
+                    for (int i = 0; (i < excludedPrefixes.length) && (exclude == false); i++) {
+                        exclude = key.startsWith(excludedPrefixes[i]);
+                    }
+                }
+
+                if (exclude == false) {
+                    String value = getStringProperty(key, "");
+                    
+                    if (stripPrefix) { 
+                        group.put(key.substring(prefix.length()), value);
+                    } else {
+                        group.put(key, value);
+                    }
+                }
             }
         }
 
